--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -50,8 +50,8 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 # Holding a given [[speed]] or [[rate#English|rate]].
 #: {{ux|en|It is growing '''at''' the rate of 3% a year.&emsp; {{nowrap|Cruising along '''at''' fifty miles per hour.}}}}
 # {{lb|en|used for skills (including in activities) or areas of knowledge}} On the [[subject]] of; [[regarding]].
-#: ''The twins were both bad '''at''' chemistry.''
-#: ''He slipped '''at''' marksmanship over his extended vacation.''
+#: {{ux|en|The twins were both bad '''at''' chemistry.}}
+#: {{ux|en|He slipped '''at''' marksmanship over his extended vacation.}}
 #* '''2015''', ''Sanyan Stories: Favorites from a Ming Dynasty Collection'' {{ISBN|0295805692}}, page 157:
 #*: She's good '''at''' playing musical instruments, singing and dancing, chess, calligraphy, and painting.
 # {{lb|en|Ireland|stressed pronunciation}} Bothering, irritating, causing discomfort to
@@ -70,42 +70,34 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 =====Translations=====
 {{trans-top|in or very near a particular place}}
 * Arabic: {{t|ar|عِنْد}}
-*: Egyptian Arabic: {{t|arz|عند|tr=ʿand|sc=Arab}}
-* Belarusian: {{t|be|у|sc=Cyrl}} / {{t|be|ў|sc=Cyrl}}, {{t|be|пры|sc=Cyrl}}, {{t|be|каля́|sc=Cyrl}}
-* Breton: [[e#Breton|e]]
-* Bulgarian: {{t+|bg|в|sc=Cyrl}}, {{t+|bg|на|sc=Cyrl}}, {{t+|bg|при|sc=Cyrl}}, {{t+|bg|до|sc=Cyrl}}
-* Burmese: {{t+|my|မှာ|sc=Mymr}}, {{t|my|၌|sc=Mymr}}
+*: Egyptian Arabic: {{t|arz|عند|tr=ʿand}}
+* Belarusian: {{t|be|у}} / {{t|be|ў}}, {{t|be|пры}}, {{t|be|каля́}}
+* Bulgarian: {{t+|bg|в}}, {{t+|bg|на}}, {{t+|bg|при}}, {{t+|bg|до}}
+* Burmese: {{t+|my|မှာ}}, {{t|my|၌}}
 * Catalan: {{t+|ca|a}}
 * Chinese:
-*: Cantonese: {{t|yue|喺|tr=hai2|sc=Hani}} {{qualifier|vernacular}}, {{t|yue|在|tr=joi6|sc=Hani}} {{qualifier|formal}}
-*: Mandarin: {{t+|cmn|在|tr=zài|sc=Hani}}
+*: Cantonese: {{t|yue|喺|tr=hai2}} {{qualifier|vernacular}}, {{t|yue|在|tr=joi6}} {{qualifier|formal}}
+*: Mandarin: {{t+|cmn|在|tr=zài}}
 * Czech: {{t+|cs|u}}, {{t+|cs|při}}
 * Danish: {{t+|da|på}}
 * Dutch: {{t+|nl|op}}, {{t+|nl|bij}}
 * Esperanto: {{t+|eo|ĉe}}
 * Faroese: {{t|fo|í}} / {{t|fo|á}} / {{t|fo|hjá}} / {{t|fo|til}}
-* Finnish: [[-lla]] / [[-llä]] ''([[adessive case]])''; <br> [[-ssa]] / [[-ssä]] ''([[inessive case]])''
 * French: {{t+|fr|à}}, {{t+|fr|en}}
 * Galician: {{t+|gl|en}}
 * German: {{t+|de|an}}, {{t+|de|auf}}, {{t+|de|bei}}, {{t+|de|in}}, {{t+|de|zu}}
-* Greek: [[στον]] (ston) {{g|m}}, [[στη]] (sti) {{g|f}}, [[στο]] (sto) {{g|n}}; [[στους]] (stous) {{g|m-p}}, [[στις]] (stis) {{g|f-p}}, [[στα]] (sta) {{g|n-p}}
-* Hebrew: {{t|he|אֵצֶל|tr=etsél|sc=Hebr}}
+* Hebrew: {{t|he|אֵצֶל|tr=etsél}}
 * Hindi: {{t+|hi|पर}}, {{t+|hi|में}}, {{t+|hi|से}}
-* Hungarian: [[-n]] / [[-on]] / [[-en]] / [[-ön]] ''([[superessive case]])''; [[-nál]] / [[-nél]] ''([[adessive case]])''
 * Ido: {{t+|io|ye}}
-* Interlingua: [[a#Interlingua|a]], [[in#Interlingua|in]]
 * Irish: {{t|ga|ag}}
 * Italian: {{t+|it|a}}, {{t+|it|in}}
-* Japanese: {{t+|ja|で|tr=...de|alt=...で|sc=Jpan}}, {{t+|ja|に|tr=...ni|alt=... に|sc=Jpan}}
+* Japanese: {{t+|ja|で|tr=...de|alt=...で}}, {{t+|ja|に|tr=...ni|alt=... に}}
 * Korean: {{t+|ko|에서|alt=...에서}}
-* Kurdish:
-*: Kurmanji: [[li]]
-*: Sorani: ([[le]])
 * Lao: {{t|lo|ທີ່}}
 * Latgalian: {{t|ltg|pi}}
 * Latin: ''[[dative case]]'', {{t+|la|in}}
 * Latvian: {{t|lv|pie}}
-* Macedonian: {{t|mk|во}}, {{t|mk|на}}, {{t|mk|кај}}, {{t|mk|при|sc=Cyrl}}
+* Macedonian: {{t|mk|во}}, {{t|mk|на}}, {{t|mk|кај}}, {{t|mk|при}}
 {{trans-mid}}
 * Malay: {{t|ms|di}}
 * Manchu: {{t|mnc|ᡩᡝ}}
@@ -114,17 +106,12 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Neapolitan: {{t|nap|a}}
 * Norwegian: {{t+|no|på}}
 * Novial: {{t|nov|che}}, {{t|nov|an}}, {{t|nov|sur}}
-* Persian: {{t+|fa|در|tr=dar|sc=fa-Arab}}
+* Persian: {{t+|fa|در|tr=dar}}
 * Polish: {{t+|pl|u}}, {{t+|pl|przy}}
 * Portuguese: {{t+|pt|a}}, {{t+|pt|em}}
 * Rapa Nui: {{t|rap|i}}
 * Romanian: {{t+|ro|la}}
 * Russian: {{t+|ru|в}}, {{t+|ru|на}}, {{t+|ru|у}}, {{t+|ru|во́зле}}
-* Slovak: [[v#Slovak|v]]; [[pri#Slovak|pri]]; [[na#Slovak|na]]
-*: ''At home'' = doma
-*: ''At the table'' = pri stole
-*: ''At the top'' = na vrchu
-*: ''At work'' = v práci
 * Slovene: {{t+|sl|pri}}, {{t+|sl|na}}, {{t+|sl|ob}}
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|wu}}, {{t|dsb|pśi}}
@@ -132,15 +119,12 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Sundanese: {{t|su|dina}}
 * Swahili: {{t|sw|karibu na}}
 * Swedish: {{t+|sv|på}}, {{t+|sv|vid}}
-*: ''At home'' = hemma
-*: ''At the table'' = vid bordet
-*: ''At work'' = på jobbet
 * Tamil: {{t-needed|ta}}
 * Telugu: {{t+|te|వద్ద}}
 * Thai: {{t+|th|ที่}}
 * Tok Pisin: {{t|tpi|long}}
 * Turkish: {{t+|tr|-da}}, {{t+|tr|-de}}
-* Ukrainian: {{t+|uk|у|sc=Cyrl}} / {{t+|uk|в|sc=Cyrl}}, {{t|uk|при|sc=Cyrl}}, {{t+|uk|біля́|sc=Cyrl}}
+* Ukrainian: {{t+|uk|у}} / {{t+|uk|в}}, {{t|uk|при}}, {{t+|uk|біля́}}
 * Vietnamese: {{t|vi|ở tại}}, {{t+|vi|lúc}}, {{t+|vi|vào}}, {{t+|vi|ở}}
 * Walloon: {{t+|wa|a}}
 * Welsh: {{t|cy|wrth}}, {{t+|cy|ger}}, {{t+|cy|yn}}
@@ -149,30 +133,24 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 {{trans-top|indicating time}}
 * Albanian: {{t|sq|në}}
 * Arabic: {{t|ar|فِي}}
-*: Egyptian Arabic: {{t|arz|في|tr=fi|sc=Arab}}
-* Breton: [[da#Breton|da]]
-* Bulgarian: {{t+|bg|в|sc=Cyrl}}
-* Burmese: {{t+|my|မှာ|sc=Mymr}}, {{t|my|၌|sc=Mymr}}
+*: Egyptian Arabic: {{t|arz|في|tr=fi}}
+* Bulgarian: {{t+|bg|в}}
+* Burmese: {{t+|my|မှာ}}, {{t|my|၌}}
 * Catalan: {{t+|ca|a}}
 * Chinese:
-*: Mandarin: {{qualifier|no preposition is uzed, e.g.:}} {{lang|und|sc=Hani|[[五]][[點鐘]]}}, {{lang|und|sc=Hani|[[五]][[点钟]]}} (wǔ diǎnzhōng) or {{lang|und|sc=Hani|[[五]][[點]]}}, {{lang|und|sc=Hani|[[五]][[点]]}} (wǔ diǎn) "at five o'clock"
+*: Mandarin: {{qualifier|no preposition is used, e.g.:}} {{lang|und|[[五]][[點鐘]]}}, {{lang|und|[[五]][[点钟]]}} (wǔ diǎnzhōng) or {{lang|und|[[五]][[點]]}}, {{lang|und|[[五]][[点]]}} (wǔ diǎn) "at five o'clock"
 * Czech: {{t+|cs|v}}
 * Danish: {{t+|da|på}}
 * Dutch: {{t+|nl|om}}
 * Esperanto: {{t+|eo|je}}
-* Finnish: [[-lta]] / [[-ltä]] ''([[ablative case]])''; <br> [[-na]] / [[-nä]] ''([[essive case]])''
 * French: {{t+|fr|à}}
 * German: {{t+|de|um}}
-* Greek: [[στον]] (ston) {{g|m}}, [[στη]] (sti) {{g|f}}, [[στο]] (sto) {{g|n}}; [[στους]] (stous) {{g|m-p}}, [[στις]] (stis) {{g|f-p}}, [[στα]] (sta) {{g|n-p}}
-* Hungarian: [[-kor]] ''([[temporalis case]])''
-* Interlingua: [[a#Interlingua|a]]
 * Italian: {{t+|it|a}}
-* Japanese: {{t+|ja|に|tr=...ni|alt=...に|sc=Jpan}}
+* Japanese: {{t+|ja|に|tr=...ni|alt=...に}}
 * Korean: {{t+|ko|에|alt=...에}}
 {{trans-mid}}
 * Kurdish:
 *: Kurmanji: {{t+|kmr|li}}
-*: Sorani: ([[le]])
 * Latin: ''[[ablative]] case''
 * Macedonian: {{t|mk|во}}
 * Malay: {{t|ms|pada}}
@@ -187,8 +165,6 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Slovene: {{t+|sl|ob}}
 * Spanish: {{t+|es|a}}
 * Swedish: {{t+|sv|vid}}
-*: ''At five o’clock'' = klockan fem ''or'' vid fem {{qualifier|informal}}
-*: ''At midnight'' = vid midnatt
 * Vietnamese: {{t+|vi|lúc}}
 * Volapük: {{t+|vo|tü}}
 * Walloon: {{t+|wa|a}}
@@ -197,28 +173,23 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 
 {{trans-top|in the direction of}}
 * Arabic: {{t|ar|صَوْب}}
-*: Egyptian Arabic: {{t|arz|ناحية|tr=naḥyet|sc=Arab}}
-* Bulgarian: {{t+|bg|в|sc=Cyrl}}
+*: Egyptian Arabic: {{t|arz|ناحية|tr=naḥyet}}
+* Bulgarian: {{t+|bg|в}}
 * Chinese:
-*: Mandarin: {{t+|cmn|在|tr=zài|sc=Hani}}
+*: Mandarin: {{t+|cmn|在|tr=zài}}
 * Czech: {{t+|cs|na}}, {{t+|cs|do}}
 * Danish: {{t+|da|til}}
 * Dutch: {{t+|nl|op}}
 * Esperanto: {{t+|eo|al}}
-* Faroese: {{t|fo|eftir}} ''({{t|fo|dative case}})''
-* Finnish: [[-lle]] ''([[allative case]])''; [[kohti]]
+* Faroese: {{t|fo|eftir}} {{q|dative case}}
 * French: {{t+|fr|à}}
 * German: {{t+|de|nach}}, {{t+|de|zu}}
-* Greek: [[στον]] (ston) {{g|m}}, [[στη]] (sti) {{g|f}}, [[στο]] (sto) {{g|n}}; [[στους]] (stous) {{g|m-p}}, [[στις]] (stis) {{g|f-p}}, [[στα]] (sta) {{g|n-p}}
-* Hungarian: [[-t]] (''[[accusative case]]'')
-* Interlingua: [[a#Interlingua|a]]
 * Irish: {{t|ga|ag}}
 * Italian: {{t+|it|a}}
-* Japanese: {{t+|ja|に|tr=...ni|alt=...に|sc=Jpan}}, {{t+|ja|を|tr=...o|alt=...を|sc=Jpan}}
+* Japanese: {{t+|ja|に|tr=...ni|alt=...に}}, {{t+|ja|を|tr=...o|alt=...を}}
 * Korean: {{t+|ko|에게|alt=...에게}}
 * Kurdish:
 *: Kurmanji: {{t+|kmr|li}}
-*: Sorani: ([[le]])
 {{trans-mid}}
 * Lao: {{t-needed|lo}}
 * Latin: {{t+|la|ad}}
@@ -233,8 +204,6 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Slovak: {{t+|sk|do}}
 * Spanish: {{t+|es|a}}
 * Swedish: {{t+|sv|på}}, {{t+|sv|mot}}
-*: Han kastade sten mot mig = ''He threw stones at (=towards) me''
-*: Han kastade sten på mig = ''He threw stones at me'' (''...and hit me'')
 * Tamil: {{t-needed|ta}}
 * Thai: {{t+|th|ณ}}
 * Tok Pisin: {{t|tpi|long}}
@@ -303,8 +272,7 @@ From {{der|az|trk-pro|*at|t=horse}}.
 {{head|da|particle}}
 
 # [[to]] {{gloss|infinitive-marker}}
-#: ''Det er menneskeligt '''at''' fejle.''
-#:: '''''To''' err is human.''
+#: {{ux|da|Det er menneskeligt '''at''' fejle.|'''To''' err is human.}}
 
 ----
 
@@ -340,7 +308,7 @@ From {{der|fo|non|at}}.
 # {{lb|fo|with dative}} {{l|en|at}}, [[towards]], [[to]]
 
 ===Etymology 2===
-From {{der|fo|non|at||that}}, from {{der|fo|gem-pro|*þat||that}}. Cognate with {{cog|enm|at||that|pos=conjunction and relative pronoun}}, {{cog|sco|at||that|pos=conjunction and relative pronoun}}. More at {{l|en|that}}.
+From {{der|fo|non|at|t=that}}, from {{der|fo|gem-pro|*þat|t=that}}. Cognate with {{cog|enm|at|t=that|pos=conjunction and relative pronoun}}, {{cog|sco|at|t=that|pos=conjunction and relative pronoun}}. More at {{l|en|that}}.
 
 ====Conjunction====
 {{head|fo|conjunction}}
@@ -348,20 +316,20 @@ From {{der|fo|non|at||that}}, from {{der|fo|gem-pro|*þat||that}}. Cognate with 
 # [[that]]
 
 ===Etymology 3===
-From {{der|fo|non|at||at, to}}, from {{der|fo|gem-pro|*at||at, to}}. More at {{l|en|at}}.
+From {{der|fo|non|at|t=at, to}}, from {{der|fo|gem-pro|*at|t=at, to}}. More at {{l|en|at}}.
 
 ====Particle====
 {{head|fo|particle}}
 
-# [[to]] (A particle used to mark the following verb as an [[infinitive]].)
-#: '''''At''' lyfta.'' (To lift)
+# [[to]] {{non-gloss definition|A particle used to mark the following verb as an [[infinitive]].}}
+#: {{ux|fo|'''At''' lyfta.|inline=1|To lift}}
 
 ----
 
 ==Friulian==
 
 ===Etymology===
-From {{der|fur|la|actus}}; cf. Italian {{m|it|atto}}.
+From {{der|fur|la|actus}}; cf. {{cog|it|atto}}.
 
 ===Noun===
 {{fur-noun|m}}
@@ -429,7 +397,7 @@ From {{inh|ga|sga|att||swelling, protuberance, tumour}}.
 {{ga-decl-m1|a|t|it|pl=tanna|strong=yes}}
 
 ===Etymology 2===
-From {{inh|ga|sga|attaid||swells, dilates, increases|pos=v}}, from {{m|sga|att||swelling, protuberance, tumour}}.
+From {{inh|ga|sga|attaid|t=swells, dilates, increases|pos=v}}, from {{m|sga|att|t=swelling, protuberance, tumour}}.
 
 ====Verb====
 {{ga-verb|pres=~ann|fut=~faidh|vn=~|pp=ata}}
@@ -443,6 +411,7 @@ From {{inh|ga|sga|attaid||swells, dilates, increases|pos=v}}, from {{m|sga|att||
 #*: ''tā mə lāv '''atī'''.''
 #*:: {{small|''conventional orthography:''}} {{l|ga||Tá mo lámh '''ataithe'''.}}
 #*::: My hand is swollen.
+#: {{syn|ga|borr}}
 # {{lb|ga|intransitive}} [[bloat]]
 # {{lb|ga|intransitive|of sea}} [[heave]]
 
@@ -450,18 +419,16 @@ From {{inh|ga|sga|attaid||swells, dilates, increases|pos=v}}, from {{m|sga|att||
 {{ga-conj-1a|a||t|broad|vn=at}}
 * Alternative past participle: {{l|ga|ataithe}}
 
-=====Synonyms=====
-* {{sense|swell}} {{l|ga|borr}}
-
 ===Mutation===
-{{ga-mut-vowel}}
+{{ga-mut}}
 
-===References===
+===Further reading===
+* {{R:ga:Ó Dónaill}}
 * {{R:DIL|4925|head=att}}
 * {{R:DIL|4929|head=attaid}}
 * {{R:ga:Dinneen 1904|42}}
 * {{R:ga:Dinneen 1927|ataim}}
-* {{R:ga:Ó Dónaill}}
+* {{R:ga:NEID}}
 
 ----
 
@@ -510,9 +477,7 @@ From {{der|lld|la|actus}}.
 ==Livonian==
 
 ===Alternative forms===
-* {{l|liv|attõ}}
-* {{l|liv|āt}}
-* {{l|liv|ātõ}}
+* {{alter|liv|attõ|āt|ātõ}}
 
 ===Verb===
 {{head|liv|verb form}}
@@ -561,8 +526,8 @@ From {{der|nn|non|at}}. Cognate with {{cog|da|at}} and {{cog|sv|att}}.
 ==Old Irish==
 
 ===Alternative forms===
-* {{sense|second-person singular}} {{l|sga|it}}
-* {{sense|third-person plural relative}} {{l|sga|ata}}
+* {{alter|sga|it||second-person singular}}
+* {{alter|sga|ata||third-person plural relative}}
 
 ===Pronunciation===
 * {{sense|second-person singular}} {{IPA|/at/|lang=sga}}
@@ -590,10 +555,10 @@ From {{inh|non|gem-pro|*atǭ}}. Related to {{cog|ang|etja}}.
 {{non-decl-n-a|at|ǫt}}
 
 =====Descendants=====
-* Icelandic: {{l|is|at}}
+* {{desc|is|at}}
 
 ===Etymology 2===
-From {{inh|non|gem-pro|*þat||that}}. Cognate with {{cog|ang|þæt}}, {{cog|got|𐌸𐌰𐍄𐌰}}.
+From {{inh|non|gem-pro|*þat|t=that}}. Cognate with {{cog|ang|þæt}}, {{cog|got|𐌸𐌰𐍄𐌰}}.
 
 ====Conjunction====
 {{head|non|conjunction}}
@@ -603,13 +568,12 @@ From {{inh|non|gem-pro|*þat||that}}. Cognate with {{cog|ang|þæt}}, {{cog|got|
 
 =====Descendants=====
 {{top2}}
-* Faroese: {{l|fo|at}}
-{{mid2}}
-* Icelandic: {{l|is|að}}
+* {{desc|fo|at}}
+* {{desc|is|að}}
 {{bottom}}
 
 ===Etymology 3===
-From {{inh|non|gem-pro|*at||at, to}}. Cognate with {{cog|ang|æt}}, {{cog|ofs|et}}, {{cog|osx|at}}, {{cog|goh|az}}, {{cog|got|𐌰𐍄}}.
+From {{inh|non|gem-pro|*at|t=at, to}}. Cognate with {{cog|ang|æt}}, {{cog|ofs|et}}, {{cog|osx|at}}, {{cog|goh|az}}, {{cog|got|𐌰𐍄}}.
 
 ====Particle====
 {{head|non|particle}}
@@ -618,9 +582,8 @@ From {{inh|non|gem-pro|*at||at, to}}. Cognate with {{cog|ang|æt}}, {{cog|ofs|et
 
 =====Descendants=====
 {{top2}}
-* Faroese: {{l|fo|at}}
-{{mid2}}
-* Icelandic: {{l|is|að}}
+* {{desc|fo|at}}
+* {{desc|is|að}}
 {{bottom}}
 
 ====Preposition====
@@ -630,9 +593,8 @@ From {{inh|non|gem-pro|*at||at, to}}. Cognate with {{cog|ang|æt}}, {{cog|ofs|et
 
 =====Descendants=====
 {{top2}}
-* Faroese: {{l|fo|at}}
-{{mid2}}
-* Icelandic: {{l|is|að}}
+* {{desc|fo|at}}
+* {{desc|is|að}}
 {{bottom}}
 
 ===References===
@@ -646,7 +608,7 @@ From {{inh|non|gem-pro|*at||at, to}}. Cognate with {{cog|ang|æt}}, {{cog|ofs|et
 ==Pipil==
 
 ===Etymology===
-From {{der|ppl|azc-nah-pro|*ātla}}, from {{der|ppl|azc-pro|*paha}} or {{m|azc-pro|*pahi}}. Cognate to {{cog|nci|ātl||water}}, {{cog|yaq|baaʔam||water}}, {{cog|hop|paahu||water, spring}}, {{cog|chl|pál||water}}, and {{cog|shh|paa||water}}.
+From {{der|ppl|azc-nah-pro|*ātla}}, from {{der|ppl|azc-pro|*paha}} or {{m|azc-pro|*pahi}}. Cognate to {{cog|nci|ātl|t=water}}, {{cog|yaq|baaʔam|t=water}}, {{cog|hop|paahu|t=water, spring}}, {{cog|chl|pál|t=water}}, and {{cog|shh|paa|t=water}}.
 
 ===Pronunciation===
 * {{IPA|/aːt/|lang=ppl}}
@@ -680,21 +642,25 @@ From {{inh|gd|sga|att}}.
 # [[protuberance]], [[prominence]]
 
 =====Derived terms=====
-{{der3|lang=gd|{{l|gd|at-bràghad||quinsy}}
-|{{l|gd|at-chuisle||aneurism}}
-|{{l|gd|at-fhuachd||chilblain}}
-|{{l|gd|at-reum||swelling in the back of the mouth}}
-}}
+{{der3
+|{{l|gd|at-bràghad|t=quinsy}}
+|{{l|gd|at-chuisle|t=aneurysm}}
+|{{l|gd|at-fhuachd|t=chilblain}}
+|{{l|gd|at-reum|t=swelling in the back of the mouth}}
+|lang=gd}}
 
 ===Etymology 2===
-From {{inh|gd|sga|attaid||swells, dilates, increases|pos=v}}, from {{m|sga|att||swelling, protuberance, tumour}}.
+From {{inh|gd|sga|attaid|t=swells, dilates, increases|pos=v}}, from {{m|sga|att|t=swelling, protuberance, tumour}}.
 
 ====Verb====
 {{head|gd|verb|past|dh'at|future|ataidh|verbal noun|at|or|atadh|past participle|athte}}
 
 # [[swell]], [[fester]], [[puff up]], become [[tumid]]
 
-===References===
+===Mutation===
+{{gd-mut-vowel}}
+
+===Further reading===
 * {{R:Dwelly}}
 * {{R:DIL|4925|head=att}}
 * {{R:DIL|4929|head=attaid}}
@@ -724,7 +690,7 @@ Borrowed from {{bor|sh|ota|آت|tr=at}}.
 {{sh-noun|g=m}}
 
 # [[steed]]
-# [[Arabian]] (horse)
+# [[Arabian]] {{q|horse}}
 
 ====Declension====
 {{sh-decl-noun|sc=Latn
@@ -738,10 +704,7 @@ Borrowed from {{bor|sh|ota|آت|tr=at}}.
 }}
 
 ====Derived terms====
-* {{l|sh|atkinja}}
-* {{l|sh|atlija}}
-* {{l|sh|atmejdan}}
-* {{l|sh|atski}}
+{{der4|atkinja|atlija|atmejdan|atski|lang=sh}}
 
 ----
 
@@ -768,9 +731,7 @@ From {{der|smr|poz-pro|*əpat}}, from {{der|smr|map-pro|*Səpat}}.
 {{head|tl|conjunction}}
 
 # [[and]]
-
-====Synonyms====
-* {{l|tl|saka}}
+#: {{syn|tl|saka}}
 
 ===See also===
 * {{l|tl|at saka}}
@@ -811,11 +772,7 @@ From {{inh|tr|ota|آت|tr=at|t=horse}}, from {{inh|tr|trk-pro|*at}}, {{m|trk-pro
 {{tr-noun-c|a|t|pred=+|poss=+}}
 
 =====Related terms=====
-* {{l|tr|atlı}}
-* {{l|tr|atsız}}
-* {{l|tr|atlık}}
-* {{l|tr|atlanmak}}
-* {{l|tr|atlaşmak}}
+{{rel3|atlı|atsız|atlık|atlanmak|atlaşmak|lang=tr}}
 
 ===Etymology 2===
 
@@ -848,7 +805,7 @@ From {{inh|tk|trk-pro|*at}}, {{m|trk-pro|*ăt|t=horse}}.
 {{tk-decl-noun-man|at|atlar|ady|atlary|adyň|atlaryň|ada|atlara|atda|atlarda|atdan|atlardan}}
 
 ===Etymology 2===
-From {{inh|tk|trk-pro|*āt|t=name}}. Cognate with {{cog|otk|𐰀𐱃|tr=āt|t=name}}, {{cog|cv|ят||name}}, {{cog|tr|ad}}.
+From {{inh|tk|trk-pro|*āt|t=name}}. Cognate with {{cog|otk|𐰀𐱃|tr=āt|t=name}}, {{cog|cv|ят|t=name}}, {{cog|tr|ad}}.
 
 ====Pronunciation====
 * {{IPA|/aːt/|lang=tk}}
@@ -917,9 +874,7 @@ This preposition causes the [[soft mutation]].
 {{head|fy|conjunction}}
 
 # [[if]]
-
-====Synonyms====
-* {{l|fy|as}}
+#: {{syn|fy|as}}
 
 ----
 
