--- a/en/l/lavenders.803569.wikitext
+++ b/en/l/lavenders.803569.wikitext
@@ -5,5 +5,10 @@
 
 # {{plural of|lavender|lang=en}}
 
+===Verb===
+{{head|en|verb form}}
+
+# {{en-third-person singular of|lavender}}
+
 ===Anagrams===
 * {{anagrams|en|Vreelands}}
