--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -161,7 +161,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 ====Verb====
 {{en-verb|badgers|badgering|badgered}}
 
-# to [[pester]], to [[annoy]] persistently.
+# To [[pester]], to [[annoy]] persistently.
 #: {{ux|en|He kept '''badgering''' her about her bad habits.}}
 # {{lb|en|British|informal}} To [[pass gas]]; to [[fart]].
 
