--- a/en/l/lancinate.803566.wikitext
+++ b/en/l/lancinate.803566.wikitext
@@ -1,9 +1,12 @@
 ==English==
 
-===Verb===
-{{en-verb|lancinates|lancinating|lancinated|lancinated}}
+===Etymology===
+{{bor|en|la|lancināre}}
 
-# To [[pierce]] or stab (as with a [[lance]]), to [[lance]].
+===Verb===
+{{en-verb|lancinat}}
+
+# {{lb|en|transitive}} To [[pierce]] or stab (as with a [[lance]]); to [[lance]].
 
 ===Anagrams===
 * {{anagrams|en|cantilena}}
