--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -39,14 +39,14 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * Esperanto: {{t|eo|Nintendo}}
 * Finnish: {{t|fi|Nintendo}}
 * French: {{t+|fr|Nintendo|f}}
-* German: {{t|de|Nintendo|f}}
+* German: {{t|de|Nintendo|n}}
 * Greek: {{t|el|Νιντενδω}}, {{t|el|Νιντενδο}}
 * Hebrew: {{t|he|נינטנדו}}
 {{trans-mid}}
 * Italian: {{t|it|Nintendo}}, {{t|it|Nintendo|f}}
 * Japanese: {{t|ja|任天堂|tr=Nintendō}}, {{t|ja|ニンテンドー|tr=Nintendō}}, {{t+|ja|ファミコン|tr=famikon}}
 * Korean: {{t-needed|ko}}
-* Latin: {{t|la|Nintendo}}, {{t|la|Nintendonis|cgenitive}}
+* Latin: {{t|la|Nintendo}} (genitive {{t|la|Nintendonis}})
 * Nepali: {{t|ne|निन्टेन्डो|sc=Deva}}
 * Persian: {{t+|fa|نینتندو|sc=fa-Arab}}
 * Portuguese: {{t|pt|Nintendo|m}}
