/* Noun */ +quote <pig#48278534>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -43,6 +43,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 #*: Backing 300 of the more aggressive protesters was a supporting cast of several thousand more who stared down the small line of police. Those in front resumed their taunts of “'''Pig''', '''pig''', fascist '''pig''',” and “'''pigs''' eat shit, '''pigs''' eat shit.” The rest of the crowd, however, backed off and sat down on the grass when reinforcements arrived. Police did not retaliate for the name-calling, and within minutes the line of demonstrators broke apart and the incident was over without violence.<sup>113</sup>
 #* '''2011''', T. J. English, ''The Savage City: Race, Murder and a Generation on the Edge'', [http://books.google.com.au/books?id=ChtI5MJU0U8C&pg=PT69&dq=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=2BLXT7CeHsaUiAfCo4WRAw&redir_esc=y#v=onepage&q=%22pig%22|%22pigs%22%20police%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false unnumbered page],
 #*: But me, I joined the party to fight the '''pigs'''. That′s why I joined. Because my experience with the police was always negative.
+#* {{quote-song|artist=Mayhem (Uptop)|title=All This|year=2017|passage=Got a mind for the undies<br/>I'm tryna stay far from the '''pigs'''}}
 # {{lb|en|informal}} A [[difficult]] [[problem]].
 #: ''Hrm... this one's a real '''pig''': I've been banging my head against the wall over it for hours!''
 # {{lb|en|countable|and|uncountable}} A [[block]] of [[cast]] [[metal]].
