--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -33,7 +33,7 @@ From {{etyl|frm|en}} {{m|frm|pole||hen}} + {{m|en|cat}}. So named because of its
 {{trans-bottom}}
 
 {{trans-top|''Mustela putorius''}}
-* Albanian: {{t|sq|pundër}}, {{t|sq|qelbësi}}
+* Albanian: {{t|sq|pundër}}, {{t+|sq|qelbës|m}}
 * Armenian: {{t+|hy|ժանտաքիս}}
 * Basque: {{t|eu|ipurtats}}
 * Belarusian: {{t|be|тхор лясны́|m}}, {{t|be|тхор чо́рны|m}}, {{t|be|тхор|m}}
