/* English */ <rub salt in the wound#48279873>

--- a/en/r/rub salt in the wound.742296.wikitext
+++ b/en/r/rub salt in the wound.742296.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Alternative forms===
-* {{l|en|rub salt in someone's wounds}}, {{l|en|rub salt into the wounds}}
+* {{alter|en|rub salt in someone's wounds|rub salt into the wounds}}
 
 ===Etymology===
 Derived from the stinging sensation of salt deliberately being rubbed into an open, bleeding wound.
@@ -9,22 +9,18 @@ Derived from the stinging sensation of salt deliberately being rubbed into an op
 ===Verb===
 {{head|en|verb|head=[[rub]] [[salt in the wound]]}}
 
-# {{lb|en|idiomatic}} To make an injury, physical or emotional, feel worse.
+# {{lb|en|idiomatic}} to make an injury, physical or emotional, feel worse
+#: {{syn|en|add insult to injury|kick someone when they are down|twist the knife}}
 
 ====Usage notes====
 * For {{m|en|rub}}, one can substitute verbs such as {{m|en|add}}, {{m|en|pour}}, {{m|en|put}}, possibly requiring a change in the preposition {{m|en|in}}.
 * See {{m|en|salt in the wound}} for variations in that portion of the expression.
 
-====Synonyms====
-* {{l|en|add insult to injury}}
-* {{l|en|kick someone when they are down}}
-* {{l|en|twist the knife}}
-
 ====Translations====
 {{trans-top|to make an injury feel worse}}
 * Bengali: {{t|bn|কাটা ঘায়ে নুনের ছিটে}}
 * Chinese:
-*: Mandarin: {{t+|cmn|雪上加霜|tr=xuě shàng jiā shuāng|sc=Hani}}
+*: Mandarin: {{t+|cmn|雪上加霜|tr=xuě shàng jiā shuāng}}
 * Crimean Tatar: {{t|crh|carağa tuz basmaq}}
 * Finnish: {{t|fi|vääntää veistä haavassa}}
 * French: {{t+|fr|remuer le couteau dans la plaie}}
@@ -32,8 +28,8 @@ Derived from the stinging sensation of salt deliberately being rubbed into an op
 * Greek: {{t|el|ρίχνω αλάτι στην πληγή}}, {{t|el|ξύνω πληγές}}
 * Italian: {{t|it|mettere il dito nella piaga}}
 {{trans-mid}}
-* Japanese: {{t|ja|傷口に塩を塗る|tr=kizuguchi ni shio o nuru|sc=Jpan}}
-* Marathi: {{t|mr|जखमेवर मिठ चोळणे|sc=Deva}}
+* Japanese: {{t|ja|傷口に塩を塗る|tr=kizuguchi ni shio o nuru}}
+* Marathi: {{t|mr|जखमेवर मिठ चोळणे}}
 * Norwegian: {{t|no|strø salt i såret}}
 * Portuguese: {{t+|pt|esfregar sal na ferida}}, {{t|pt|pôr o dedo na ferida}}
 * Romanian: {{t|ro|a pune sare pe rană}}
