--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -288,6 +288,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Spanish: {{t+|es|silbar}}, {{t+|es|chiflar}}, {{t+|es|pitar}}
 * Swahili: {{t+|sw|kipenga}}
 * Swedish: {{t+|sv|vissla}}
+* Thai: {{t+|th|ผิวปาก}}, {{t+|th|เป่าปาก}}
 * Ukrainian: {{t|uk|свисті́ти|impf|sc=Cyrl}}, {{t|uk|сюрча́ти|impf|sc=Cyrl}}
 * Vietnamese: {{t+|vi|huýt}}, {{t|vi|huýt sáo}}, {{t+|vi|huýt gió}}
 * Vilamovian: {{t|wym|wyspułn}}
