--- a/en/i/inculcation.741078.wikitext
+++ b/en/i/inculcation.741078.wikitext
@@ -1,7 +1,7 @@
 ==English==
 {{rfe|en}}
 ===Noun===
-{{en-noun}}
+{{en-noun|~}}
 
 # The [[teaching]] of something by using frequent [[repetition]]
 
