--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -5,7 +5,7 @@
 [[Image:Sow with piglet.jpg|thumb|right|250px|Domestic '''pigs''' (''Sus scrofa domestica'')]]
 
 ===Etymology 1===
-From {{etyl|enm|en}} {{m|enm|pigge||pig, pigling}} (originally a term for a young pig, with adult pigs being {{m|enm|swine}}), apparently from {{etyl|ang|en}} {{m|ang|*picga}} (attested only in compounds, such as {{m|ang|picgbrēad||mast, pig-fodder}}). Compare Middle Dutch {{m|dum|pogge}}, {{m|dum|puggen}}, {{m|dum|pegsken||pigling}}. Connection to early {{cog|nl|bigge}} (modern {{cog|nl|big||piglet}}), {{cog|fy|bigge||pigling}}{{,}} and similar terms in {{etyl|gml|-}} are sometimes proposed, "but the phonology is difficult"<ref name="NED">''A new English dictionary on historical principles''</ref> and other sources say the words are "almost certainly not" related.<ref>{{R:Dictionary.com}}</ref>
+From {{inh|en|enm|pigge|t=pig, pigling}} (originally a term for a young pig, with adult pigs being {{m|enm|swine}}), apparently from {{inh|en|ang|*picga}} (attested only in compounds, such as {{m|ang|picgbrēad|t=mast, pig-fodder}}). Compare Middle Dutch {{cog|dum|pogge}}, {{m|dum|puggen}}, {{m|dum|pegsken|t=pigling}}. Connection to early {{cog|nl|bigge}} (modern {{cog|nl|big|tpiglet}}), {{cog|fy|bigge|t=pigling}}{{,}} and similar terms in {{cog|gml|-}} are sometimes proposed, "but the phonology is difficult"<ref name="NED">''A new English dictionary on historical principles''</ref> and other sources say the words are "almost certainly not" related.<ref>{{R:Dictionary.com}}</ref>
 
 British slang sense "police officer" from at least 1785.<ref>'''2003''', Victoria Fromkin, Robert Rodman, Nina M. Hyams, ''An Introduction to Language'', [http://books.google.com.au/books?id=7PftAAAAMAAJ&q=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&dq=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=6jLXT4-XMsHYigfxvJS4Aw&redir_esc=y page 474] — Similarly, the use of the word '''''pig''''' for “policeman” goes back at least as far as 1785, when a writer of the time called a Bow Street police officer a “China Street '''pig'''.”</ref>
 
@@ -18,22 +18,22 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 {{en-noun}}
 
 # Any of several intelligent [[mammalian]] species of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domestication|domesticated]] [[animal]] ''[[Sus scrofa]]''.
-#: ''The man kept a pen with two '''pigs''' that he fed from carrots to cabbage.''
+#: {{ux|en|The man kept a pen with two '''pigs''' that he fed from carrots to cabbage.}}
 # {{lb|en|specifically}} A young swine, a [[piglet]] {{qualifier|contrasted with a [[hog]], an adult swine}}.
 #* '''2005''' April, ''Live Swine from Canada, Investigation No. 731-TA-1076 (Final), publication 3766, April 2005, U.S. International Trade Commission'' {{ISBN|1457819899}}, page I-9:
 #*: Weanlings grow into feeder '''pigs''', and feeder '''pigs''' grow into slaughter hogs. {{...}} Ultimately the end use for virtually all '''pigs''' and hogs is to be slaughtered for the production of pork and other products.
 # {{lb|en|uncountable}} The [[edible]] [[meat]] of such an animal; [[pork]].
-#: ''Some religions prohibit their adherents from eating '''pig'''.''
+#: {{ux|en|Some religions prohibit their adherents from eating '''pig'''.}}
 #* '''2005''', Ross Eddy Osborn, ''Thorns of a Tainted Rose'' {{ISBN|0741425319}}, [https://books.google.com.au/books?id=cdg7kQFFcYoC&pg=PA196&dq=%22Miss+Chastene,+could+you+fetch+me+out+an+extra+plate+of+pig%22&hl=en&sa=X&redir_esc=y#v=onepage&q=%22Miss%20Chastene%2C%20could%20you%20fetch%20me%20out%20an%20extra%20plate%20of%20pig%22&f=false page 196]:
 #*: "Miss Chastene, could you fetch me out an extra plate of '''pig''' and biscuit. My partner can't do without your marvelous cooking."
 # Someone who overeats or eats rapidly and noisily.
-#: ''You gluttonous '''pig'''! Now that you've eaten all the cupcakes, there will be none for the party!''
+#: {{ux|en|You gluttonous '''pig'''! Now that you've eaten all the cupcakes, there will be none for the party!}}
 # A [[nasty]] or [[disgusting]] person, usually male.
-#: ''She considered him a '''pig''' as he invariably stared at her bosom when they talked.''
+#: {{ux|en|She considered him a '''pig''' as he invariably stared at her bosom when they talked.}}
 # A [[dirty]] or [[slovenly]] person.
-#: ''He was a '''pig''' and his apartment a pigpen; take-away containers and pizza boxes in a long, moldy stream lined his counter tops.''
+#: {{ux|en|He was a '''pig''' and his apartment a pigpen; take-away containers and pizza boxes in a long, moldy stream lined his counter tops.}}
 # {{senseid|en|police officer}} {{lb|en|now|chiefly|US|UK|Australia|derogatory|slang}} A [[police officer]]. {{defdate|From ''ante'' 1785.}}
-#: ''The protester shouted, “Don't give in to the '''pigs'''!” as he was arrested.''
+#: {{ux|en|The protester shouted, “Don't give in to the '''pigs'''!” as he was arrested.}}
 #* '''1989''', {{w|Dan Simmons}}, ''{{w|Carrion Comfort}}'', [http://books.google.com.au/books?id=ClXFYXTcrXUC&pg=PA359&dq=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=6jLXT4-XMsHYigfxvJS4Aw&redir_esc=y#v=onepage&q=%22pig%22|%22pigs%22%20police%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false page 359],
 #*: “...Sounds too easy,” Marvin was saying. “What about the '''pigs'''?”
 #*: He meant police.
@@ -45,17 +45,17 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 #*: But me, I joined the party to fight the '''pigs'''. That′s why I joined. Because my experience with the police was always negative.
 #* {{quote-song|artist=Mayhem (Uptop)|title=All This|year=2017|passage=Got a mind for the undies<br/>I'm tryna stay far from the '''pigs'''}}
 # {{lb|en|informal}} A [[difficult]] [[problem]].
-#: ''Hrm... this one's a real '''pig''': I've been banging my head against the wall over it for hours!''
+#: {{ux|en|Hrm... this one's a real '''pig''': I've been banging my head against the wall over it for hours!}}
 # {{lb|en|countable|and|uncountable}} A [[block]] of [[cast]] [[metal]].
-#: ''The conveyor carried the '''pigs''' from the smelter to the freight cars.''
-#: ''After the ill-advised trade, the investor was stuck with worthless options for 10,000 tons of iron '''pig'''.''
+#: {{ux|en|The conveyor carried the '''pigs''' from the smelter to the freight cars.}}
+#: {{ux|en|After the ill-advised trade, the investor was stuck with worthless options for 10,000 tons of iron '''pig'''.}}
 # The [[mold]] in which a block of metal is cast.
-#: ''The '''pig''' was cracked, and molten metal was oozing from the side.''
+#: {{ux|en|The '''pig''' was cracked, and molten metal was oozing from the side.}}
 # {{lb|en|engineering}} A device for cleaning or inspecting the inside of an oil or gas [[pipeline]], or for separating different substances within the pipeline. Named for the pig-like squealing noise made by their progress.
-#: ''Unfortunately, the '''pig''' sent to clear the obstruction got lodged in a tight bend, adding to the problem.''
+#: {{ux|en|Unfortunately, the '''pig''' sent to clear the obstruction got lodged in a tight bend, adding to the problem.}}
 # {{lb|en|pejorative}} A person who is obese to the extent of resembling a pig (the animal).
 # {{lb|en|US|military|slang}} The general-purpose M60 [[machine gun]], considered to be heavy and bulky.
-#: ''Unfortunately, the M60 is about twenty-four pounds and is very unbalanced. You try carrying the '''pig''' around the jungle and see how you feel.''
+#: {{ux|en|Unfortunately, the M60 is about twenty-four pounds and is very unbalanced. You try carrying the '''pig''' around the jungle and see how you feel.}}
 # {{lb|en|uncountable}} A simple [[dice]] [[game]] in which players roll the dice as many times as they like, either accumulating a greater score or losing previous points gained.
 
 =====Synonyms=====
@@ -69,53 +69,11 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * {{sense|mammal of genus Sus}} {{l|en|boar}}, {{l|en|herd boar}}; [[sow]], [[brood sow]]; [[piglet]], [[piggy]]
 
 =====Derived terms=====
-{{rel-top|terms derived from the noun "pig"}}
-* {{l|en|blind pig}}
-* {{l|en|bush pig}}
-* {{l|en|dish pig}}
-* {{l|en|eat like a pig}}
-* {{l|en|flying pig}}
-* {{l|en|guinea pig}}
-* {{l|en|happy as a pig in shit}}
-* {{l|en|if pigs had wings}}
-* {{l|en|in a pig's eye}}
-* {{l|en|minipig}}
-* {{l|en|pig bed}}
-* {{l|en|pigface}}
-* {{l|en|piggery}}
-* {{l|en|piggish}}
-{{mid3}}
-* {{l|en|piggy}}
-* {{l|en|piggy bank}}
-* {{l|en|piggyback}}
-* {{l|en|pigheaded}}
-* {{l|en|pig in a blanket}}
-* {{l|en|pig in a poke}}
-* {{l|en|pig iron}}
-* {{l|en|pig it}}
-* {{l|en|pig Latin}}
-* {{l|en|pig lead}}
-* {{l|en|piglet}}
-* {{l|en|pig-out}}
-* {{l|en|pig out}}
-{{mid3}}
-* {{l|en|pigpen}}
-* {{l|en|pigskin}}
-* {{l|en|pig-sticking}}
-* {{l|en|pigsty}}
-* {{l|en|pigtail}}
-* {{l|en|pigweed}}
-* {{l|en|potbellied pig}}
-* {{l|en|suckling pig}}
-* {{l|en|sweat like a pig}}
-* {{l|en|when pigs fly}}
-* {{l|en|whistle pig}}
-* {{l|en|year of the pig}}
-{{rel-bottom}}
+{{der4|title=terms derived from the noun "pig"|blind pig|bush pig|dish pig|eat like a pig|flying pig|guinea pig|happy as a pig in shit|if pigs had wings|in a pig's eye|minipig|pig bed|pigface|piggery|piggish|piggy|piggy bank|piggyback|pigheaded|pig in a blanket|pig in a poke|pig iron|pig it|pig Latin|pig lead|piglet|pig-out|pig out|pigpen|pigskin|pig-sticking|pigsty|pigtail|pigweed|potbellied pig|suckling pig|sweat like a pig|when pigs fly|whistle pig|year of the pig|lang=en}}
 
 =====Descendants=====
-* Abenaki: {{l|abe|piks}} {{qualifier|from "pigs"}}
-* Malecite-Passamaquoddy: {{l|pqm|piks}} {{qualifier|from "pigs"}}
+* {{desc|abe|piks|bor=1}} {{qualifier|from "pigs"}}
+* {{desc|pqm|piks|bor=1}} {{qualifier|from "pigs"}}
 
 =====Translations=====
 {{trans-top|mammal of genus ''Sus''}}
@@ -129,13 +87,13 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Albanian: {{t+|sq|derr|m}}, {{t+|sq|thi|m}}
 * Ama: {{t|amm|fu}}
 * Amanab: {{t|amn|tata}}
-* Amharic: {{t+|am|አሳማ|sc=Ethi}}
+* Amharic: {{t+|am|አሳማ}}
 * Aneme Wake: {{t|aby|boro}}
 * Apache:
 *: Western Apache: {{t|apw|góchiʼ}}
 * Arabic: {{t|ar|خِنْزِير|m}}, {{t|ar|حَلُوف|m}}
-*: Egyptian Arabic: {{t|arz|خنزير|m|tr=xanzīr|sc=Arab}}, {{t|arz|حلوف|m|tr=ḥalūf|sc=Arab}}
-*: Moroccan Arabic: {{t|ary|حلوف|tr=ḥəluf|sc=Arab}}
+*: Egyptian Arabic: {{t|arz|خنزير|m|tr=xanzīr}}, {{t|arz|حلوف|m|tr=ḥalūf}}
+*: Moroccan Arabic: {{t|ary|حلوف|tr=ḥəluf}}
 * Aramaic:
 *: Hebrew: {{t|arc|חזירא|tr=ħzīrā’|m}}, {{t|arc|חזירתא|tr=ħzīrtā’|f}}
 *: Syriac: {{t|arc|ܚܙܝܪܐ|tr=ħzīrā’|m}}, {{t|arc|ܚܙܝܪܬܐ|tr=ħzīrtā’|f}}
@@ -150,24 +108,24 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Basque: {{t+|eu|urde}}, {{t+|eu|zerri}}, {{t+|eu|txerri}}
 * Bau Bidayuh: {{t|sne|oyuo}}
 * Belarusian: {{t|be|свіння́|f}}
-* Bengali: {{t|bn|শুওর|sc=Beng}}
+* Bengali: {{t|bn|শুওর}}
 * Bouyei: {{t|pcc|duezmul}}, {{t|pcc|mul}}
 * Breton: {{t+|br|pemoc'h|m}}
-* Buginese: {{t|bug|bawi|sc=Bugi}}
+* Buginese: {{t|bug|bawi}}
 * Bulgarian: {{t+|bg|свиня́|f}}
-* Burmese: {{t+|my|ဝက်|sc=Mymr}}
+* Burmese: {{t+|my|ဝက်}}
 * Catalan: {{t+|ca|porc|m}}
 * Cebuano: {{t|ceb|baboy}}
 * Central Melanau: {{t|mel|babui}}
 * Chamicuro: {{t|ccc|kuuchi}}
 * Chamorro: {{t|ch|babui}}
 * Chechen: {{t|ce|жаргӏа}}
-* Cherokee: {{t|chr|ᏏᏆ|tr=siqua}}
+* Cherokee: {{t|chr|ᏏᏆ}}
 * Chichewa: {{t|ny|nkhumba}}
 * Chinese:
-*: Cantonese: {{t|yue|豬|sc=Hani}}, {{t|yue|猪|tr=zyu1|sc=Hani}}
+*: Cantonese: {{t|yue|豬}}, {{t|yue|猪|tr=zyu1}}
 *: Hakka: {{t|hak|豬}}, {{t|hak|猪|tr=chû}}, {{t|hak|豬仔}}, {{t|hak|猪仔|tr=chû-é}}
-*: Mandarin: {{t+|cmn|豬|sc=Hani}}, {{t+|cmn|猪|tr=zhū|sc=Hani}}
+*: Mandarin: {{t+|cmn|豬}}, {{t+|cmn|猪|tr=zhū}}
 *: Min Nan: {{t+|nan|豬}}, {{t|nan|猪|tr=ti, tu}}, {{t+|nan|豬仔}}, {{t|nan|猪仔|tr=ti-á, tu-á}}
 * Chuvash: {{t|cv|сысна}}
 * Comox: {{t|coo|kʷašu}}
@@ -181,7 +139,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Erzya: {{t|myv|туво}}
 * Esperanto: {{qualifier|♂♀}} {{t+|eo|porko}}, {{qualifier|♂}} {{t|eo|virporko}}, {{qualifier|neologism, ♂}} {{t|eo|porkiĉo}}, {{qualifier|♀}} {{t|eo|porkino}}
 * Estonian: {{t|et|siga}}, {{t|et|põrsakest|p}}
-* Evenki: {{t|evn|сунюрин|tr=suņurin}}
+* Evenki: {{t|evn|сунюрин}}
 * Faroese: {{t|fo|svín|n}}
 * Finnish: {{t+|fi|sika}}
 * French: {{t+|fr|cochon|m}}, {{t+|fr|porc|m}}, {{t+|fr|pourceau|m}}
@@ -194,7 +152,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 *: Franconian: {{t|de|Mocke|f}}
 *: Regional German: {{t+|de|Docke|f}}, {{t+|de|Wutz|f}}
 *: Swabian: {{t|de|Kosel|f}}
-* Gothic: {{t|got|𐍃𐍅𐌴𐌹𐌽|n|sc=Goth}}
+* Gothic: {{t|got|𐍃𐍅𐌴𐌹𐌽|n}}
 * Greek: {{t+|el|γουρούνι|n}}
 *: Ancient Greek: {{t|grc|ὗς}}
 * Guerrero Amuzgo: {{t|amu|kítzku}}
@@ -202,7 +160,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Hausa: {{t|ha|alade}}
 * Hawaiian: {{t|haw|puaʻa}}
 * Hebrew: {{t+|he|חֲזִיר|m|tr=khazír}}
-* Hindi: {{t+|hi|सूअर|m|sc=Deva}}
+* Hindi: {{t+|hi|सूअर|m}}
 * Hopi: {{t|hop|pitsooti}}
 * Hungarian: {{t+|hu|sertés}}, {{t+|hu|disznó}}, {{t+|hu|malac}}
 * Iban: {{t|iba|jani}}, {{t|iba|babi}}
@@ -213,22 +171,22 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Interlingua: {{t|ia|porco}}
 * Irish: {{t+|ga|muc|f}}
 * Italian: {{t+|it|maiale|m}}, {{t+|it|porco|m}}, {{t+|it|suino|m}}
-* Japanese: {{t+|ja|豚|tr=ぶた, buta}}, {{t+|ja|ブタ|tr=buta|sc=Jpan}}
+* Japanese: {{t+|ja|豚|tr=ぶた, buta}}, {{t+|ja|ブタ|tr=buta}}
 * Javanese: {{t+|jv|babi}}
 * Kabardian: {{t|kbd|кхъуэ}}
-* Kannada: {{t+|kn|ಹಂದಿ|sc=Knda}}
+* Kannada: {{t+|kn|ಹಂದಿ}}
 * Karelian: {{t|krl|počči}}
 * Kazakh: {{t+|kk|шошқа}}
 * Khasi: {{t|kha|sniang}}
-* Khmer: {{t+|km|ជ្រូក|tr=jruuk|sc=Khmr}}, {{t|km|សត្វជ្រូក|tr=sat jruuk|sc=Khmr}}
+* Khmer: {{t+|km|ជ្រូក|tr=jruuk}}, {{t|km|សត្វជ្រូក|tr=sat jruuk}}
 * Kimaragang: {{t|kqr|wogok}}
 * Korean: {{t+|ko|돼지}}
-* Kumyk: {{t|kum|донгуз|tr=doñuz|sc=Cyrl}}
+* Kumyk: {{t|kum|донгуз|tr=doñuz}}
 * Kurdish:
 *: Sorani: {{t+|ku|به‌راز|?}}
 * Kyrgyz: {{t+|ky|чочко}}
 * Ladin: {{t|lld|porcel}}
-* Lao: {{t+|lo|ໝູ|sc=Laoo}}
+* Lao: {{t+|lo|ໝູ}}
 * Latgalian: {{t|ltg|cyuka|f}}
 * Latin: {{t+|la|sus|c}}, {{t+|la|porcus|m}}<!--do not put the scientific name here-->
 * Latvian: {{t+|lv|cūka|f}}
@@ -244,36 +202,35 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Lü: {{t-needed|khb}}
 * Macedonian: {{t|mk|свиња|f}}
 * Malay: {{t+|ms|babi}}, {{t+|ms|khinzir}}
-* Malayalam: {{t+|ml|പന്നി|sc=Mlym}}
+* Malayalam: {{t+|ml|പന്നി}}
 * Maltese: {{t|mt|ħanżir|m}}, {{t|mt|qażquż|m}}
 * Maléku Jaíka: {{t|gut|tunhífa}}
-* Manchu: {{t|mnc|ᡠᠯᡤᡳᠶᠠᠨ|tr=ulgiyan}}
-* Mandar: {{t|mdr|boe|sc=Bugi}}
+* Manchu: {{t|mnc|ᡠᠯᡤᡳᠶᠠᠨ}}
+* Mandar: {{t|mdr|boe}}
 * Manx: {{t|gv|muc}}
 * Maori: {{t|mi|poaka}}
-* Marathi: {{t|mr|डुकर|m|sc=Deva}}
+* Marathi: {{t|mr|डुकर|m}}
 * Mazanderani: {{t|mzn|خی|tr=xi}}
 * Mi'kmaq: {{t|mic|gulgwi's|an}}
 * Moksha: {{t|mdf|тува}}
-* Mongolian: {{t+|mn|гахай|sc=Cyrl}}
+* Mongolian: {{t+|mn|гахай}}
 * Montagnais: {{t|moe|kukush}}
 * Motu: {{t|meu|boroma}}
 * Nahuatl: {{t+|nah|pitzotl}}
 * Navajo: {{t|nv|bisóodi}}
 * Nepali: {{t+|ne|सुँगुर|tr=sũgur}}
 * Ngazidja Comorian: {{t|zdj|purunku}}
-* Nivkh: {{t|niv|овӻоӈ|tr=ovx̌oŋ|sc=Cyrl}}
-* Norman: {{t|nrf|couochon|m}}, {{t|nrf|bête à saie|f}}, {{t|nrf|por|m}}, {{t|nrf|gronneux|m}}, {{t|nrf|moussieu|m}}, {{t|nrf|quétot|m}}
+* Nivkh: {{t|niv|овӻоӈ}}
 * Norwegian: {{t+|no|svin|n}}, {{t+|no|gris|m}}
 * Novial: {{t-needed|nov}}
 * Occitan: {{t+|oc|pòrc|m}}
 * Okinawan: {{t|ryu|うゎー|tr=waa}}
-* Old Church Slavonic: {{t|cu|свиниꙗ|f|sc=Cyrs}}
+* Old Church Slavonic: {{t|cu|свиниꙗ|f}}
 * Old Turkic: {{t|otk|𐱃𐰆𐰭𐰆𐰕|tr=toŋuz}}
-* Oriya: {{t|or|ଘୁଷୁରିଛୁଆ|tr=ghuṣurichu'ā|sc=Orya}}
+* Oriya: {{t|or|ଘୁଷୁରିଛୁଆ|tr=ghuṣurichu'ā}}
 * Ossetian: {{t|os|хуы}}
 * Pashto: {{t+|ps|خنځير|m|tr=xanjír}}, {{t|ps|خوګ|m|tr=xug}}
-* Persian: {{t+|fa|خوک|tr=xuk|sc=fa-Arab}}
+* Persian: {{t+|fa|خوک|tr=xuk}}
 * Polish: {{t+|pl|świnia|f}}
 * Portuguese: {{t+|pt|porco|m}}, {{t+|pt|suíno|m}}
 * Punjabi: {{t|pa|ਸੂਰ|m}}
@@ -300,7 +257,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Shan: {{t|shn|မူ|tr=mŭ}}
 * Sichuan Yi: {{t|ii|ꃮ|tr=vot}}, {{t|ii|ꃢ|tr=vit}} {{qualifier|literary}}
 * Sicilian: {{t+|scn|porcu|m}}, {{t+|scn|poccu|m}}, {{t+|scn|maiali|m}}, {{t+|scn|majali|m}}
-* Sinhalese: {{t+|si|ඌරා|sc=Sinh}}
+* Sinhalese: {{t+|si|ඌරා}}
 * Slovak: {{t|sk|prasa|n}}, {{t+|sk|sviňa|f}}
 * Slovene: {{t+|sl|svinja|f}}, {{t+|sl|prašič|m}}, {{t|sl|pujs|m}}
 * Sorbian:
@@ -318,7 +275,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Tatar: {{t+|tt|дуңгыз}}, {{t+|tt|чучка}}
 * Telugu: {{t+|te|పంది}}, {{t+|te|సూకరము|m}}
 * Thai: {{t+|th|หมู}}
-* Tibetan: {{t|bo|ཕག་པ|sc=Tibt}}
+* Tibetan: {{t|bo|ཕག་པ}}
 * Timugon Murut: {{t|tih|bawi}}
 * Tocharian B: {{t|txb|suwo}}
 * Tok Pisin: {{t|tpi|pik}}
@@ -330,9 +287,9 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Tuvan: {{t|tyv|хаван}}
 * Udmurt: {{t|udm|парсь}}
 * Ukrainian: {{t|uk|свиня́|f}}
-* Urdu: {{t|ur|خوک|tr=xūk|sc=ur-Arab}}, {{t|ur|خنزیر|tr=xanzīr|sc=ur-Arab}}, {{t|ur|سؤر|m|tr=sū'ar|sc=ur-Arab}}
+* Urdu: {{t|ur|خوک|tr=xūk}}, {{t|ur|خنزیر|tr=xanzīr}}, {{t|ur|سؤر|m|tr=sū'ar}}
 * Urhobo: {{t|urh|esi}}
-* Uyghur: {{t|ug|چوشقا|sc=ug-Arab}}
+* Uyghur: {{t|ug|چوشقا}}
 * Uzbek: {{t|uz|choʻchka}}
 * Venetian: {{t+|vec|mas-cio|m}}, {{t|vec|porselo|m}}, {{t|vec|porzèl|m}}
 * Veps: {{t|vep|siga}}
@@ -491,9 +448,9 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 {{en-verb|pigs|pigging|pigged|pigged}}
 
 # {{lb|en|of swine}} to [[give birth]].
-#: ''The black sow '''pigged''' at seven this morning.''
+#: {{ux|en|The black sow '''pigged''' at seven this morning.}}
 # {{lb|en|intransitive}} To greedily [[consume]] (especially food).
-#: ''They were '''pigging''' on the free food at the bar.
+#: {{ux|en|They were '''pigging''' on the free food at the bar.}}
 #* '''2009''', Thomas Pynchon, ''Inherent Vice'', Vintage 2010, page 349:
 #*: "Wow, Doc. That's heavy." Denis sat there '''pigging''' on the joint as usual.
 # {{lb|en|intransitive}} To [[huddle]] or [[lie]] [[together]] like pigs, in one [[bed]]. <!--Webster 1913-->
@@ -509,11 +466,7 @@ Origin unknown. See {{m|en|piggin}}.
 # An earthenware hot-water jar to warm a bed; a stone bed warmer
 
 =====Derived terms=====
-* {{l|en|pig-man}}
-* {{l|en|pig-wife}}
-* {{l|en|pig-cart}}
-* {{l|en|pig-ass}}
-* {{l|en|pig-shop}}
+{{der3|pig-man|pig-wife|pig-cart|pig-ass|pig-shop|lang=en}}
 
 ===References===
 <references />
@@ -531,7 +484,7 @@ Origin unknown. See {{m|en|piggin}}.
 ==Danish==
 
 ===Etymology===
-From {{etyl|non|da}} {{m|non|pík}}.
+From {{inh|da|non|pík}}.
 
 ===Pronunciation===
 * {{IPA|/piɡ/|[pʰiɡ̊]|lang=da}}
@@ -542,9 +495,9 @@ From {{etyl|non|da}} {{m|non|pík}}.
 
 # [[spike]]
 # [[barb]]
-# [[spine]] (needle-like structure)
-# [[quill]] (needle-like structure)
-# [[prickle]] (a small, sharp pointed object, such as a thorn)
+# [[spine]] {{gloss|needle-like structure}}
+# [[quill]] {{gloss|needle-like structure}}
+# [[prickle]] {{gloss|a small, sharp pointed object, such as a thorn}}
 
 ====Inflection====
 {{da-noun-infl|en|e|stem=pigg}}
@@ -554,21 +507,18 @@ From {{etyl|non|da}} {{m|non|pík}}.
 ==Scots==
 
 ===Etymology===
-From {{etyl|enm|sco}} {{m|enm|pigge}}, {{m|enm|pygge}}, from {{etyl|ang|sco}} {{m|ang|*picga||pig; pigling}}, see {{l|en|pig}}.
+From {{inh|sco|enm|pigge}}, {{m|enm|pygge}}, from {{inh|sco|ang|*picga|t=pig; pigling}}, see {{l|en|pig}}.
 
-Sense of "vessel; jar" is from {{etyl|enm|sco}} {{m|enm|pygg}}, perhaps an extension of the above.
+Sense of "vessel; jar" is from {{inh|sco|enm|pygg}}, perhaps an extension of the above.
 
 ===Noun===
 {{sco-noun}}
 
-# [[#English|pig]]
+# {{l|en|pig}}
 # [[pot]], [[jar]], [[earthenware]]
 
 ====Derived terms====
-* {{l|sco|pig-hoose}}
-* {{l|sco|pirlie pig}}
-* {{l|sco|uilie-pig}}
-* {{l|sco|whisky pig}}
+{{der4|pig-hoose|pirlie pig|uilie-pig|whisky pig|lang=sco}}
 
 [[Category:sco:Mammals]]
 
@@ -577,15 +527,13 @@ Sense of "vessel; jar" is from {{etyl|enm|sco}} {{m|enm|pygg}}, perhaps an exten
 ==Torres Strait Creole==
 
 ===Etymology===
-From {{etyl|en|tcs}} {{m|en|pig}}.
+From {{inh|tcs|en|pig}}.
 
 ===Noun===
 {{head|tcs|noun}}
 
 # {{l|en|pig}}
-
-====Synonyms====
-* {{l|tcs|pwaka}}
+#: {{syn|tcs|pwaka}}
 
 [[Category:tcs:Mammals]]
 
@@ -594,7 +542,7 @@ From {{etyl|en|tcs}} {{m|en|pig}}.
 ==Welsh==
 
 ===Etymology===
-Cognate with Breton {{m|br|beg}}.
+Cognate with {{cog|br|beg}}.
 
 ===Pronunciation===
 * {{IPA|/piːɡ/|lang=cy}}
