t+ckb:[[به‌راز]] t-balance ([[WT:EDIT|Assisted]]) <pig#48295177>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -182,6 +182,8 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Kimaragang: {{t|kqr|wogok}}
 * Korean: {{t+|ko|돼지}}
 * Kumyk: {{t|kum|донгуз|tr=doñuz}}
+* Kurdish:
+*: Central Kurdish: {{t|ckb|به‌راز}}
 * Kyrgyz: {{t+|ky|чочко}}
 * Ladin: {{t|lld|porcel}}
 * Lao: {{t+|lo|ໝູ}}
@@ -190,9 +192,9 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Latvian: {{t+|lv|cūka|f}}
 * Ledo Kaili: {{t-check|lew|bavu}}
 * Lithuanian: {{t+|lt|kiaulė|f}}
-{{trans-mid}}
 * Livonian: {{t|liv|sigā}}
 * Lojban: {{t|jbo|xarju}}
+{{trans-mid}}
 * Low German: {{t+|nds|Swien|n}}
 * Ludian: {{t|lud|šiga}}
 * Luganda: {{t|lg|embizzi}}
