--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -293,9 +293,10 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 # {{lb|en|intransitive|figurative}} To churn or foment, as if wishing to rise to the surface.
 #* '''1853''', Elizabeth Cleghorn Gaskell, ''Ruth''
 #*: The blood '''bubbled''' up to her brain, and made such a sound there, as of boiling waters, that she did not hear the words which Mr. Bradshaw first spoke {{...}}
+#: ''Rage '''bubbled''' inside him.''
+# To rise through a medium or system, similar to the way that bubbles rise in liquid.
 #* '''2002''', David Flanagan, ''JavaScript: the definitive guide''
 #*: The target of this event is the most deeply nested common ancestor of all changes that occurred in the document, and it '''bubbles''' up the document tree {{...}}
-#: ''Rage '''bubbled''' inside him.''
 # {{lb|en|transitive|archaic}} To [[cheat]], [[delude]].
 #* '''1749''', Henry Fielding, ''Tom Jones'', Folio Society 1973, p. 443:
 #*: No, no, friend, I shall never be '''bubbled''' out of my religion in hopes only of keeping my place under another government {{...}}
