--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -291,7 +291,9 @@ From {{der|az|trk-pro|*at|t=horse}}.
 ===Particle===
 {{head|da|particle}}
 
-# [[to]] {{gloss|infinitive-markerklk
+# [[to]] {{gloss|infinitive-marker}}
+#: {{ux|da|Det er menneskeligt '''at''' fejle.|'''To''' err is human.}}
+
 ----
 
 ==Dutch==
