--- a/en/a/aeq_.802819.wikitext
+++ b/en/a/aeq_.802819.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Etymology===
-From {{etyl|la|mul}} {{m|la|aequalis}}
+From {{der|mul|la|aequalis}}
 
 ===Abbreviation===
 {{head|mul|abbreviation}}
