--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-Borrowed from {{bor|en|frm|-}}, from {{der|en|fro|multiplicacion}}, from {{der|en|la|multiplicatio|multiplicatio, multiplicationem}}.
+Borrowed from {{bor|en|frm|-}}, from {{der|en|fro|multiplicacion}}, from {{der|en|la|multiplicatio|multiplicatio, multiplicationem}}; ~equivalent to {{suffix|multiplicate|ion|lang=en}}.
 
 ===Pronunciation===
 * {{IPA|/ˌmʌltɪplɪˈkeɪʃən/|lang=en}}
