--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -106,6 +106,7 @@
 
 ====Translations====
 {{trans-top|to bring to light by searching}}
+* French: {{t+|fr|fureter}}
 * Maori: {{t|mi|paraketu}}
 {{trans-mid}}
 {{trans-bottom}}
