t+fr:[[fouiner]] ([[WT:EDIT|Assisted]]) <ferret#48310294>

--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -106,7 +106,7 @@
 
 ====Translations====
 {{trans-top|to bring to light by searching}}
-* French: {{t+|fr|fureter}}
+* French: {{t+|fr|fureter}}, {{t+|fr|fouiner}}
 * Maori: {{t|mi|paraketu}}
 {{trans-mid}}
 {{trans-bottom}}
