--- a/en/l/Ligurian.741748.wikitext
+++ b/en/l/Ligurian.741748.wikitext
@@ -51,10 +51,12 @@
 ====Translations====
 {{trans-top|Gallo-Italic language}}
 * Catalan: {{t|ca|lígur|m}}
+* Chinese:
+*: Mandarin: {{t|cmn|利古里亞語}}
 * French: {{t+|fr|ligurien|m}}
 * Galician: {{t|gl|lígur|m}}
-* Ligurian: {{t-needed|lij}}
 {{trans-mid}}
+* Ligurian: {{t-needed|lij}}
 * Portuguese: {{t|pt|lígure|m}}, {{t|pt|ligúrio|m}}
 * Spanish: {{t+|es|ligur}}
 * Swedish: {{t|sv|liguriska|c}}
