--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -44,6 +44,7 @@ From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||
 * Italian: {{t+|it|quadrilatero|m}}, {{t+|it|quadrangolo|m}}
 {{trans-mid}}
 * Japanese: {{t|ja|四辺形|tr=しへんけい, shihenkei|sc=Jpan}}, {{t+|ja|四角形|tr=しかっけい, shikakkei|sc=Jpan}}
+* Lao: {{t+|lo|ຮູບສີ່ແຈ}}
 * Malay: {{t|ms|segi empat}}, {{t|ms|caturkona}}, {{t|ms|tetragon}}
 * Maori: {{t|mi|tapawhā}}
 * Norwegian:
