--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -61,6 +61,7 @@ From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||
 * Swahili: {{t|sw|pembenne}}
 * Swedish: {{t+|sv|fyrhörning|c}}
 * Tagalog: {{t|tl|patsiha}}, {{t|tl|patgilid}}
+* Tamil: {{t|ta|நாற்கரம்}}
 * Telugu: {{t+|te|చతుర్భుజి}}
 * Turkish: {{t+|tr|dörtgen}}
 * Zazaki: {{t|zza|çehardag}}, {{t|zza|çardag}}
