/* Danish */ cleanup <bid#48321817>

--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -227,7 +227,7 @@ From {{etyl|enm|en}} {{m|enm|beden}}, from the {{etyl|ang|en}} verb {{m|ang|bēo
 
 ===Etymology 1===
 {{PIE root|da|bʰeyd}}
-From {{etyl|non|da}} {{m|non|bit}}.
+From {{der|da|non|bit}}.
 
 ====Pronunciation====
 * {{IPA|/bid/|[b̥ið]|lang=da}}
@@ -242,7 +242,7 @@ From {{etyl|non|da}} {{m|non|bit}}.
 
 ===Etymology 2===
 {{PIE root|da|bʰeyd}}
-From {{etyl|gml|da}} {{m|gml|bīt}}, replacing a two-syllable form {{m|non|biti}}.
+From {{der|da|gml|bīt}}, replacing a two-syllable form {{m|non|biti}}.
 
 ====Pronunciation====
 * {{IPA|/bid/|[b̥ið]|lang=da}}
