--- a/en/r/reattachment.741530.wikitext
+++ b/en/r/reattachment.741530.wikitext
@@ -4,7 +4,7 @@
 {{prefix|en|re|attachment}}
 
 ===Noun===
-{{en-noun}}
+{{en-noun|~}}
 
 # The act of [[reattach]]ing; a second or subsequent [[attachment]].
 
