--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -106,6 +106,7 @@ Earlier {{m|en|seise}}, from {{etyl|enm|en}} {{m|enm|seisen}}, {{m|enm|sesen}}, 
 {{trans-top|take possession of (by force, law etc)}}
 * Czech: {{t|cs|uchvátit}}, {{t+|cs|zabavit|pf}}, {{t|cs|zkonfiskovat}}
 * Danish: {{t|da|beslaglægge}}
+* Dutch: {{t|nl|in beslag nemen}}
 * French: {{t+|fr|saisir}}
 * German: {{t+|de|beschlagnahmen}}
 {{trans-mid}}
