--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -85,14 +85,14 @@ From {{etyl|enm|en}} {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|a
 
 ====Translations====
 {{trans-top|back to a former place or state}}
-* Bashkir: {{t|ba|кире|sc=Cyrl}}
+* Bashkir: {{t|ba|кире}}
 * Dutch: {{t+|nl|weer}}, {{t+|nl|weder}}
 * German: {{t+|de|wieder}}, {{t+|de|zurück}}
 * Low German:
 *: German Low German: {{t+|nds-de|wedder}}
 {{trans-mid}}
 * Portuguese: {{t|pt|de volta}}
-* Russian: {{t+|ru|наза́д|sc=Cyrl}}, {{t+|ru|обра́тно|sc=Cyrl}}
+* Russian: {{t+|ru|наза́д}}, {{t+|ru|обра́тно}}
 * Yiddish: {{t|yi|ווידער}}, {{t|yi|צוריק}}
 {{trans-bottom}}
 
@@ -100,26 +100,26 @@ From {{etyl|enm|en}} {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|a
 * Afrikaans: {{t|af|weer}}, {{t|af|alweer}}
 * Albanian: {{t+|sq|përsëri}}
 * Arabic: {{t|ar|مَرَّة أُخْرَى|f|tr=marra ʾuḵrā}}, {{t|ar|كَرَّة أُخْرَى|f|tr=karra ʾuḵrā}} {{qualifier|adverbial accusative used}}, {{t|ar|ثَانِيَةً}}
-*: Egyptian Arabic: {{t|arz|تاني|tr=tani|sc=Arab}}, {{t|arz|كمان|tr=kaman - kman|sc=Arab}}
+*: Egyptian Arabic: {{t|arz|تاني|tr=tani}}, {{t|arz|كمان|tr=kaman - kman}}
 * Aragonese: {{t-needed|an}}
 * Armenian: {{t+|hy|էլի}}, {{t+|hy|կրկին}}, {{qualifier|Eastern-Armenian}} {{t+|hy|նորից}}, {{qualifier|Western-Armenian}} {{t+|hy|նորեն}}
 * Assamese: {{t|as|আকৌ}}
 * Asturian: {{t|ast|otra vez}}, {{t|ast|otra vegada}}, {{t|ast|de nuevo}}
 * Avar: {{t|av|жеги}}
 * Azeri: {{t|az|yenidən}}, {{t|az|yenə}}
-* Bashkir: {{t|ba|тағы ла|sc=Cyrl}}, {{t|ba|тағы берҙе|sc=Cyrl}}, {{t|ba|йәнә|sc=Cyrl}}
+* Bashkir: {{t|ba|тағы ла}}, {{t|ba|тағы берҙе}}, {{t|ba|йәнә}}
 * Basque: {{t|eu|berriro}}
-* Belarusian: {{t|be|зноў|sc=Cyrl}}, {{t|be|яшчэ́ раз|sc=Cyrl}}
-* Bengali: {{t|bn|আবার|tr=abar|sc=Beng}}
+* Belarusian: {{t|be|зноў}}, {{t|be|яшчэ́ раз}}
+* Bengali: {{t|bn|আবার}}
 * Berber:
 *: Tashelhit: {{t|shi|dax}}
 * Breton: {{t+|br|adarre}}
 * Bulgarian: {{t+|bg|отно́во}}, {{t+|bg|пак}}
-* Burmese: {{t|my|နောက်တဖန်|sc=Mymr}}, {{t+|my|ထပ်|sc=Mymr}}, {{t+|my|ပြန်လှန်|sc=Mymr}}
+* Burmese: {{t|my|နောက်တဖန်}}, {{t+|my|ထပ်}}, {{t+|my|ပြန်လှန်}}
 * Catalan: {{t|ca|una altra vegada}}, {{t|ca|de nou}}, {{t|ca|un altre cop}}
-* Cherokee: {{t|chr|ᎠᏏᏇ|sc=Cher}}
+* Cherokee: {{t|chr|ᎠᏏᏇ}}
 * Chinese:
-*: Mandarin: {{qualifier|of future events}} {{t+|cmn|再|tr=zài|sc=Hani}}, {{qualifier|of past events}} {{t+|cmn|又|tr=yòu|sc=Hani}}, {{qualifier|once again}} {{t+|cmn|遍|alt=再...一遍|tr=zai4... yíbiàn|sc=Hani}}, {{t+|cmn|重新|tr=chóngxīn|sc=Hani}}
+*: Mandarin: {{qualifier|of future events}} {{t+|cmn|再|tr=zài}}, {{qualifier|of past events}} {{t+|cmn|又|tr=yòu}}, {{qualifier|once again}} {{t+|cmn|遍|alt=再...一遍|tr=zai4... yíbiàn}}, {{t+|cmn|重新|tr=chóngxīn}}
 * Crimean Tatar: {{t|crh|kene}}
 * Czech: {{t+|cs|zase}}, {{t+|cs|opět}}, {{t|cs|znova}}
 * Danish: {{t+|da|igen}}
@@ -130,13 +130,13 @@ From {{etyl|enm|en}} {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|a
 * Finnish: {{t+|fi|taas}}, {{t+|fi|uudelleen}}, {{t+|fi|jälleen}}, {{t+|fi|toistamiseen}}, {{t|fi|vielä kerran}}
 * French: {{t+|fr|de nouveau}}, {{t+|fr|encore}}
 * Galician: {{t|gl|outra vez}}, {{t|gl|de novo}}
-* Georgian: {{t|ka|ხელახლა|sc=Geor}}, {{t|ka|კვლავ|sc=Geor}}, {{t|ka|ისევ|sc=Geor}}
+* Georgian: {{t|ka|ხელახლა}}, {{t|ka|კვლავ}}, {{t|ka|ისევ}}
 * German: {{t+|de|erneut}}, {{t|de|noch einmal}}, {{t+|de|nochmal}}, {{t|de|schon wieder}}, {{t+|de|wieder}}
 * Greek: {{t+|el|ξανά}}, {{t+|el|πάλι}}
 *: Ancient: {{t|grc|ἄνωθεν}}
 * Hawaiian: {{t|haw|hou}}
 * Hebrew: {{t+|he|שׁוּב|tr=shuv}}
-* Hindi: {{t+|hi|फिर}}, {{t|hi|फिर से|sc=Deva}}, {{t+|hi|दुबारा|sc=Deva}}
+* Hindi: {{t+|hi|फिर}}, {{t|hi|फिर से}}, {{t+|hi|दुबारा}}
 * Hungarian: {{t+|hu|újra}}, {{t+|hu|megint}}, {{t+|hu|ismét}}, {{t|hu|már megint}}
 * Icelandic: {{t+|is|aftur}}, {{t|is|á ný}}
 * Ido: {{t+|io|itere}}, {{t+|io|ankorfoye}}
@@ -146,35 +146,33 @@ From {{etyl|enm|en}} {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|a
 * Italian: {{t+|it|di nuovo}}, {{t+|it|ancora}}
 * Japanese: {{t+|ja|又|tr=mata}}, {{t+|ja|また|tr=mata}}, {{t|ja|再び|tr=ふたたび, futatabi}}, {{t|ja|もう一度|tr=mō ichido}}, {{t+|ja|あらためて|tr=aratamete}}
 * Kannada: {{t-needed|kn}}
-* Kazakh: {{t|kk|қайтадан|sc=Cyrl}}, {{t+|kk|жаңа|sc=Cyrl}}, {{t|kk|қайта|sc=Cyrl}}, {{t|kk|жаңадан|sc=Cyrl}}, {{t|kk|тағы|sc=Cyrl}}
-* Khmer: {{t+|km|ទៀត|tr=dtīət|sc=Khmr}}, {{t|km|ម្ដងទៀត|tr=mdorng dtīət|sc=Khmr}}
+* Kazakh: {{t|kk|қайтадан}}, {{t+|kk|жаңа}}, {{t|kk|қайта}}, {{t|kk|жаңадан}}, {{t|kk|тағы}}
+* Khmer: {{t+|km|ទៀត|tr=dtīət}}, {{t|km|ម្ដងទៀត|tr=mdorng dtīət}}
 * Korean: {{t+|ko|다시}}, {{t+|ko|또}}
-* Kurdish: {{t+|ku|dîsa|sc=ku-Arab}}
-*: Sorani: {{t+|ku|دیسان}}, {{t|ku|هه‌مدیس}}, {{t|ku|دوباره‌}}
-* Kyrgyz: {{t+|ky|дагы|sc=Cyrl}}, {{t+|ky|кайтадан|sc=Cyrl}}, {{t|ky|жаңыдан|sc=Cyrl}}
+* Kyrgyz: {{t+|ky|дагы}}, {{t+|ky|кайтадан}}, {{t|ky|жаңыдан}}
 {{trans-mid}}
-* Lao: {{t|lo|ອີກ|sc=Laoo}}
+* Lao: {{t|lo|ອີກ}}
 * Latin: {{t|la|denuo}}, {{t|la|iterum}}
 * Latvian: {{t|lv|atkal}}
 * Lithuanian: {{t+|lt|vėl}}
 * Low German:
 *: German Low German: {{t|nds-de|nochmaal}}, {{t+|nds-de|wedder}}, {{t|nds-de|noch eenmaal}}
-* Macedonian: {{t|mk|пак|sc=Cyrl}}, {{t|mk|повторно|sc=Cyrl}}
+* Macedonian: {{t|mk|пак}}, {{t|mk|повторно}}
 * Malay: {{t+|ms|lagi}}
-* Malayalam: {{t+|ml|വീണ്ടും|sc=Mlym}}
+* Malayalam: {{t+|ml|വീണ്ടും}}
 * Maltese: {{t|mt|darb' oħra}}
 * Maore Comorian: {{t|swb|raha}}
 * Maori: {{t|mi|anō}}
-* Mongolian: {{t+|mn|дахин|sc=Cyrl}}
+* Mongolian: {{t+|mn|дахин}}
 * Nahuatl: {{t|nah|occeppa}}
-* Navajo: {{t|nv|nááná}}
+* Navajo: {{t|nv|nááná|sc=Latn}}
+* Northern Altai : {{t|atv|ча́ҥыдан}}
 * Norwegian:
 *: Bokmål: {{t+|nb|igjen}}, {{t|nb|på nytt}}
-* Northern Altai : {{t|atv|чаҥыдан|tr=ćáñıdan}}
 *: Nynorsk: {{t|nn|igjen}}, {{t|nn|på ny}}, {{t|nn|på nytt}}
 * Occitan: {{t+|oc|encara}}, {{t|oc|de nòu}}
 * Pashto: {{t+|ps|بيا|tr=byâ}}
-* Persian: {{t+|fa|دگربار|tr=degarbâr}}, {{t+|fa|دوباره|tr=do-bâre|sc=fa-Arab}}, {{t+|fa|باز|tr=bâz|sc=fa-Arab}}, {{t|fa|از نو|tr=az now|sc=fa-Arab}}
+* Persian: {{t+|fa|دگربار|tr=degarbâr}}, {{t+|fa|دوباره|tr=do-bâre}}, {{t+|fa|باز|tr=bâz}}, {{t|fa|از نو|tr=az now}}
 * Polish: {{t+|pl|ponownie}}, {{t+|pl|znowu}}, {{t|pl|jeszcze raz}}
 * Portuguese: {{t+|pt|de novo}}, {{t|pt|outra vez}}, {{t+|pt|novamente}}
 * Romanian: {{t+|ro|iarăși}}, {{t|ro|din nou}}
@@ -190,7 +188,7 @@ From {{etyl|enm|en}} {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|a
 * Slovene: {{t+|sl|spét}}, {{t|sl|ponôvno}}, {{t|sl|znôva}}
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|zasej}}
-* Southern Altai: {{t|alt|јаҥыдан|tr=jañídan}}, {{t|alt|кайтадан|tr=qaytadán}}, {{t|alt|тагы|tr=tágí}}
+* Southern Altai: {{t|alt|јаҥы́дан}}, {{t|alt|кайтада́н}}, {{t|alt|та́гы}}
 * Spanish: {{t|es|otra vez}}, {{t+|es|de nuevo}}, {{t+|es|nuevamente}}
 * Swedish: {{t+|sv|igen}}, {{t+|sv|ånyo}}, {{t+|sv|åter}}, {{t+|sv|på nytt}}, {{t+|sv|å nyo}}
 * Tagalog: {{t|tl|muli}}, {{t|tl|nanaman}}, {{t|tl|ulit}}
@@ -201,20 +199,20 @@ From {{etyl|enm|en}} {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|a
 * Tok Pisin: {{t|tpi|gen}}
 * Turkish: {{t+|tr|yeniden}}, {{t+|tr|tekrar}}, {{t+|tr|gene}}, {{t+|tr|yine}}, {{t+|tr|bir daha}}
 * Turkmen: {{t|tk|ýene}}, {{t+|tk|baryp}}
-* Ukrainian: {{t|uk|зно́ву|sc=Cyrl}}, {{t|uk|знов|sc=Cyrl}}, {{t|uk|ще раз|sc=Cyrl}}
-* Urdu: {{t|ur|پھر|tr=phir|sc=ur-Arab}}, {{t|ur|پھر سے|tr=phir se|sc=ur-Arab}}, {{t+|ur|دوبارہ|tr=dubārā|sc=ur-Arab}}
+* Ukrainian: {{t|uk|зно́ву}}, {{t|uk|знов}}, {{t|uk|ще раз}}
+* Urdu: {{t|ur|پھر|tr=phir}}, {{t|ur|پھر سے|tr=phir se}}, {{t+|ur|دوبارہ|tr=dubārā}}
 * Uzbek: {{t+|uz|yana}}, {{t+|uz|qaytadan}}, {{t+|uz|qayta}}
 * Vietnamese: {{t+|vi|lại}}
 * Welsh: {{t|cy|eto}}
 * West Frisian: {{t|fy|wer}}
-* Yiddish: {{t|yi|ווידער|sc=Hebr}}, {{t|yi|נאָכאַמאָל|sc=Hebr}}, {{t|yi|צוריק|sc=Hebr}}
+* Yiddish: {{t|yi|ווידער}}, {{t|yi|נאָכאַמאָל}}, {{t|yi|צוריק}}
 * Yucatec Maya: {{t|yua|ka’teen}}
 * Zazaki: {{t|zza|fına}}
 {{trans-bottom}}
 
 {{trans-top|used in a question to ask something one has forgotten}}
 * Chinese:
-*: Mandarin: {{t+|cmn|來著|sc=Hani}}, {{t+|cmn|来着|tr=láizhe|sc=Hani}}
+*: Mandarin: {{t+|cmn|來著}}, {{t+|cmn|来着|tr=láizhe}}
 * Danish: {{t+|da|nu}}
 * Dutch: {{t|nl|ook al weer}}
 * Finnish: {{t+|fi|taas}}
@@ -225,7 +223,7 @@ From {{etyl|enm|en}} {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|a
 {{trans-mid}}
 * Japanese: {{t+|ja|っけ|tr=kke}}
 * Korean: {{t|ko|ᆻ지}}, {{t|ko|ᆻ죠}}
-* Mongolian: {{t|mn|билээ|sc=Cyrl}}
+* Mongolian: {{t|mn|билээ}}
 * Portuguese: {{t+|pt|mesmo}}
 * Russian: {{t|ru|говори́те}}
 * Serbo-Croatian: {{t|sh|beše}}
