--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -149,8 +149,11 @@ From {{etyl|enm|en}} {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|a
 * Kazakh: {{t|kk|қайтадан}}, {{t+|kk|жаңа}}, {{t|kk|қайта}}, {{t|kk|жаңадан}}, {{t|kk|тағы}}
 * Khmer: {{t+|km|ទៀត|tr=dtīət}}, {{t|km|ម្ដងទៀត|tr=mdorng dtīət}}
 * Korean: {{t+|ko|다시}}, {{t+|ko|또}}
-* Kyrgyz: {{t+|ky|дагы}}, {{t+|ky|кайтадан}}, {{t|ky|жаңыдан}}
+* Kurdish:
+*: Central Kurdish: {{t|ckb|دیسان}}, {{t|ckb|هه‌مدیس}}, {{t|ckb|دوباره}}
+*: Northern Kurdish: {{t+|kmr|dîsa}}
 {{trans-mid}}
+* Kyrgyz: {{t+|ky|дагы}}, {{t+|ky|кайтадан}}, {{t|ky|жаңыдан}}
 * Lao: {{t|lo|ອີກ}}
 * Latin: {{t|la|denuo}}, {{t|la|iterum}}
 * Latvian: {{t|lv|atkal}}
