--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -184,8 +184,8 @@ From {{etyl|enm|en}} {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|a
 * Sanskrit: {{t+|sa|पुनः}}
 * Scottish Gaelic: {{t|gd|a-rithist}}, {{t|gd|às ùr}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|опет}}, {{t|sh|поново}}, {{t|sh|снова}}, {{t|sh|однова}}
-*: Roman: {{t+|sh|opet}}, {{t+|sh|ponovo}}, {{t|sh|snova}}, {{t|sh|odnova}}
+*: Cyrillic: {{t|sh|о̏пе̄т}}, {{t|sh|по̏ново}}, {{t|sh|снова}}, {{t|sh|однова}}
+*: Roman: {{t+|sh|ȍpēt}}, {{t+|sh|pȍnovo}}, {{t|sh|snova}}, {{t|sh|odnova}}
 * Sicilian: {{t+|scn|arreri}}, {{t+|scn|arrè}}
 * Slovak: {{t|sk|opäť}}, {{t|sk|zasa}}, {{t|sk|znova}}, {{t|sk|znovu}}
 * Slovene: {{t+|sl|spét}}, {{t|sl|ponôvno}}, {{t|sl|znôva}}
