/* Adjective */ RfD closed as keep. <quack#48328433>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -202,7 +202,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken||to croak like a frog; make a noise
 ====Adjective====
 {{en-adj|-}}
 
-# {{rfd-sense|en}} Falsely presented as having [[medicinal]] [[power#Noun|powers]].
+# Falsely presented as having [[medicinal]] [[power#Noun|powers]].
 #: {{ux|en|Don't get your hopes up; that's '''quack''' medicine!}}
 
 =====Translations=====
