/* Adjective */ Updated {{en-adj}} and {{term-context}} <quack#48329103>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -200,7 +200,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken||to croak like a frog; make a noise
 {{trans-bottom}}
 
 ====Adjective====
-{{en-adj}} {{term-context|the comparative and superlative forms are rare, and probably used humorously}}
+{{en-adj|more|er}} {{term-context|''quacker'' and ''quackest'' are rare, and probably used humorously|lang=en}}
 
 # [[falsely|Falsely]] [[present#Verb|presented]] as having [[medicinal]] [[power#Noun|powers]].
 #: {{ux|en|Don't get your hopes up; that's '''quack''' medicine!}}
