--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -61,7 +61,7 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 #: ''I managed to '''blow''' $1000 at blackjack in under an hour.''
 #: ''I '''blew''' $35 thou on a car.''
 #: ''We '''blew''' an opportunity to get benign corporate sponsorship.''
-# {{lb|en|transitive|vulgar}} To [[fellate]].
+# {{lb|en|transitive|vulgar}} To [[fellate]]; to perform [[oral sex]] on (usually a man)
 #: ''Who did you have to '''blow''' to get those backstage passes?''
 # {{lb|en|transitive}} To [[leave]].
 #: ''Let's '''blow''' this joint.''
