t+ca:[[dessagnar]] ([[WT:EDIT|Assisted]]) <bleed#48337472>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -121,7 +121,7 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en
 
 {{trans-top|draw blood}}
 * Bulgarian: {{t|bg|проливам кръв}}, {{t|bg|пускам кръв}}
-* Catalan: {{t+|ca|sagnar}}
+* Catalan: {{t+|ca|sagnar}}, {{t+|ca|dessagnar}}
 * Faroese: {{t|fo|taka blóð úr æðr|alt=taka (einhvørjum) blóð úr æðr}}
 * Greek: {{t+|el|αφαιμάσσω}} {{qualifier|literally}}, {{t|el|παίρνω αίμα}}
 * Irish: {{t|ga|fuiligh}}
