--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -67,7 +67,8 @@ Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}
 * See also [[Thesaurus:police officer]]
 
 =====Derived terms=====
-* [[cop shop]]
+* {{l|en|cophouse}}
+* {{l|en|cop shop}}
 
 =====Translations=====
 {{trans-top|police officer}}
