--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -97,6 +97,7 @@ From {{der|en|enm|beden}}, from the {{der|en|ang|-}} verb {{m|ang|bēodan||offer
 * Dutch: {{t+|nl|bieden}}
 * Finnish: {{t+|fi|tarjota}}, {{t|fi|tehdä tarjous}}
 * French: {{t|fr|faire une enchère}} (at auction)
+* Galician: {{t+|gl|oferer}}, {{t+|gl|oferecer}}, {{t+|gl|ofrecer}}, {{t+|gl|ofrir}}, {{t+|gl|gravecer}}, {{t+|gl|brindar}}, {{t+|gl|obradar}}
 * German: {{t+|de|bieten}}
 * Italian: {{t|it|fare un'offerta per un'asta}}
 * Japanese: {{t|ja|[[値]][[を]][[つける]]|tr=ねをつける, ne o tsukeru}}, {{t|ja|入札|tr=にゅうさつする, nyūsatsu suru|alt=入札する}}
