--- a/en/m/Markovian.776104.wikitext
+++ b/en/m/Markovian.776104.wikitext
@@ -5,7 +5,7 @@
 {{suffix|Markov|ian|lang=en}}, named for the Russian mathematician [[w:Andrey Markov|Andrey Markov]].
 
 ===Pronunciation===
-* {{a|US}} {{IPA|maɹˈkoʊvi.ən|lang=en}gsneenwguejsgs sbgssm to NSS bahzsjsxjiiskowj Insane In The Hood}
+* {{a|US}} {{IPA|maɹˈkoʊvi.ən|lang=en}}
 
 ===Adjective===
 {{en-adj|-}}
