--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -54,6 +54,7 @@ From {{etyl|la|en}} {{m|la|qua||in the capacity of}}.
 
 ===Pronunciation===
 * {{IPA|/kvaː/|[kʰvæːˀ]|lang=da}}
+* {{rhymes|aː|lang=da}}
 
 ===Conjunction===
 {{head|da|conjunction}}
