--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -8,7 +8,7 @@
 * {{homophones|lang=en|mil}}
 
 ===Etymology 1===
-From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{inh|en|gem-pro|*mulīnō}} or {{m|gem-pro|*mulīnaz}}, from {{der|en|LL.|molinum}} or {{m|la|molinus}}, from Classical {{der|en|la|mola}}.
+From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{inh|en|gem-pro|*mulīnō}} or {{m|gem-pro|*mulīnaz}}, from {{der|en|LL.|molinum}} or {{m|la|molinus}}, from Classical {{der|en|la|mola}}. Perhaps cognate with {{m|en|Milne}}. {{doublet|en|moulin}}.
 
 ====Noun====
 {{en-noun}}
