t+sv:[[nit]] ([[WT:EDIT|Assisted]]) <dud#48371117>

--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -39,6 +39,7 @@ From {{inh|en|enm|dudde|t=cloak, mantle, kind of cloth; ragged clothing or cloth
 {{trans-top|lottery ticket that does not give a payout}}
 * German: {{t+|de|Niete|f}}
 {{trans-mid}}
+* Swedish: {{t+|sv|nit|c}}
 {{trans-bottom}}
 
 {{trans-see|obsolete: clothes|duds}}
