--- a/en/w/w/o.26235.wikitext
+++ b/en/w/w/o.26235.wikitext
@@ -11,7 +11,9 @@
 # {{lb|en|sport}} [[walkover]]
 # {{lb|en|scheduling}} week of (E.g. w/o Jan 7th, week of Jan 7th)
 
-WIFE OF
+====Related terms====
+* {{l|en|w/}}
+* {{l|en|w/i}}
 
 ===Anagrams===
 * {{anagrams|en|'ow|ow}}
