--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -56,6 +56,7 @@ From {{inh|en|enm|mille}}, {{m|enm|milne}}, from {{inh|en|ang|mylen}}, from {{in
 {{der3|lang=en
 |[[accreditation mill]]
 |[[author mill]]
+|[[Barker's mill]]
 |[[cog mill]]
 |[[diploma mill]]
 |[[essay mill]]
