--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -63,7 +63,7 @@ Earlier {{m|en|seise}}, from {{etyl|enm|en}} {{m|enm|seisen}}, {{m|enm|sesen}}, 
 * Dutch: {{t+|nl|grijpen}}, {{t+|nl|vangen}}, {{t+|nl|pakken}}
 * Esperanto: {{t|eo|kapti}}
 * Finnish: {{t+|fi|tarttua}}
-* French: {{t+|fr|saisir}}
+* French: {{t+|fr|saisir}}, {{t+|fr|saisir|alt=se saisir de}}
 * German: {{t+|de|ergreifen}}, {{t+|de|fassen}}
 * Hungarian: {{t+|hu|megfog}}, {{t+|hu|megragad}}
 * Italian: {{t+|it|prendere}}, {{t+|it|afferrare}}
@@ -77,6 +77,7 @@ Earlier {{m|en|seise}}, from {{etyl|enm|en}} {{m|enm|seisen}}, {{m|enm|sesen}}, 
 * Old English: {{t|ang|niman}}
 * Old Portuguese: {{t|roa-opt|tomar}}
 * Ottoman Turkish: {{t|ota|استولى على|tr=istevli ele|sc=ota-Arab}}
+* Plautdietsch: {{t|pdt|faustnämen}}
 * Polish: {{t+|pl|chwycić|pf}}, {{t+|pl|złapać}}, {{t+|pl|chwytać|impf}}, {{t+|pl|łapać|impf}}
 * Portuguese: {{t+|pt|agarrar}}, {{t+|pt|capturar}}, {{t+|pt|apanhar}}
 * Russian: {{t+|ru|захва́тывать|impf}}, {{t+|ru|захвати́ть|pf}}, {{t+|ru|схва́тывать|impf}}, {{t+|ru|схвати́ть|pf}}
