--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -145,7 +145,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * French: {{t+|fr|cochon|m}}, {{t+|fr|porc|m}}, {{t+|fr|pourceau|m}}
 *: Old French: {{t|fro|porc|m}}, {{t|fro|bacon|m}}
 * Friulian: {{t|fur|purcit|m}}
-* Galician: {{t+|gl|porco|m}}, {{t+|gl|cocho|m}}
+* Galician: {{t+|gl|porco|m}}, {{t+|gl|cocho|m}}, {{t+|gl|verrón|m}}, {{t+|gl|currincho|m}}, {{t+|gl|canavés|m}}, {{t+|gl|reco|m}}, {{t+|gl|quino|m}}, {{t+|gl|melco|m}}
 * Georgian: {{t+|ka|ღორი}}
 * German: {{t+|de|Schwein|n}}, {{qualifier|domestic}} {{t+|de|Hausschwein|n}},
 *: Alemannic German: {{t|gsw|Sou|f}}
