--- a/en/m/monetarism.720273.wikitext
+++ b/en/m/monetarism.720273.wikitext
@@ -16,10 +16,11 @@ From [[monetary]], from Latin [[monetarius]], from [[moneta#Latin|monēta]]
 *: Mandarin: {{t+|cmn|貨幣主義|sc=Hani}}, {{t+|cmn|货币主义|tr=huòbìzhǔyì|sc=Hani}}
 * Finnish: {{t|fi|monetarismi}}
 * French: {{t+|fr|monétarisme|m}}
-{{trans-mid}}
 * German: {{t|de|Monetarismus|m}}
+{{trans-mid}}
 * Polish: {{t|pl|monetaryzm|m}}
 * Romanian: {{t|ro|monetarism|n}}
+* Russian: {{t+|ru|монетаризм|m}}
 * Serbo-Croatian: {{t+|sh|monetarizam|m}}
 {{trans-bottom}}
 
