--- a/en/m/milkweed.720309.wikitext
+++ b/en/m/milkweed.720309.wikitext
@@ -1,5 +1,5 @@
 ==English==
-[[File:Asclepias_curassavica13.jpg|thumb|Tropical '''milkweed''' (plant), {{taxlink|Asclepias curassavica|species|noshow=1}}]]
+[[File:Asclepias_curassavica13.jpg|thumb|Tropical '''milkweed''' (plant), {{taxlink|Asclepias curassavica L.|species|noshow=1}}]]
 
 ===Etymology===
 {{compound|milk|weed|lang=en}}
@@ -29,7 +29,7 @@
 
 ===References===
 * {{pedia}}
-* {{specieslite|Asclepias}}
+* {{specieslite|Asclepias|i=1}}
 * {{R:USDA Plants|ASCLE}}
 
 [[Category:en:Dogbane family plants]]
