--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -139,9 +139,11 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 *: Bokmål: {{t+|nb|ekorn|m|n}}
 *: Nynorsk: {{t|nn|ekorn|n}}, {{t|nn|ikorn|n}}
 * Occitan: {{t+|oc|esquiròl|m}}
+* Ojibwe: {{t|oj|ajidamoo}}
 * Old English: {{t|ang|ācweorna|m}}
 * Old Norse: {{t|non|íkorni|m}}
 * Ossetian: {{t|os|ӕхсӕрӕг}}, {{t|os|ӕхсӕрсӕттӕг}}
+* Ottawa: {{t|otw|jidmoo}}
 * Persian: {{t+|fa|سنجاب|tr=sanjâb|sc=fa-Arab}}, {{t|fa|وروره|tr=varvare|sc=fa-Arab}}
 * Pipil: {{t|ppl|mututzin}}
 * Polish: {{t+|pl|wiewiórka|f}}
