--- a/en/l/Las Vegas.741384.wikitext
+++ b/en/l/Las Vegas.741384.wikitext
@@ -35,7 +35,7 @@ From {{etyl|es|en}} {{m|es|las}} {{m|es|vegas||the meadows}}.
 * Japanese: {{t|ja|ラスベガス|tr=Rasubegasu}}
 * Korean: {{t|ko|라스베이거스|tr=Laseubeigeoseu}}
 * Marathi: {{t|mr|लास व्हेगस|n|tr=lāsa vhegāsa|sc=Deva}}
-* Navajo: {{t|nv|Naʼazhǫǫsh hátsoh}}
+* Navajo: {{t|nv|Naʼazhǫǫsh Hatsoh}}
 * Polish: {{t+|pl|Las Vegas|n}}
 * Portuguese: {{t|pt|Las Vegas|f}}
 * Russian: {{t+|ru|Лас-Ве́гас|m}}
