--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -126,7 +126,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 * Slovene: {{t|sl|staviti}}
 * Spanish: {{t+|es|apostar}}
 * Swedish: {{t|sv|slå vad}}
-* Thai: {{t-needed|th}}
+* Thai: {{t|th|พนัน}}, {{t|th|เดิมพัน}}
 * Turkish: {{t-needed|tr}}
 {{trans-bottom}}
 
