t+ga:[[ag [[triall]] ar]] t-balance ([[WT:EDIT|Assisted]]) <bound#48403708>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -287,8 +287,9 @@ Alteration of {{m|en|boun}}, with '''-d''' partly for [[euphonic]] effect and pa
 {{trans-top|ready to start or go (to); moving in the direction (of)}}
 * Bulgarian: {{t|bg|на път за}}
 * Dutch: {{qualifier|voor}} {{t+|nl|bestemd}}
-* Italian: {{t+|it|diretto}}, {{t+|it|incamminato}}
+* Irish: {{t|ga|ag [[triall]] ar}}
 {{trans-mid}}
+* Italian: {{t+|it|diretto}}, {{t+|it|incamminato}}
 * Japanese: {{t|ja|行き|tr=... yuki no|alt=…行きの|sc=Jpan}}, {{t+|ja|向かう|tr=... ni mukatte|alt=…に向かって|sc=Jpan}}
 * Russian: {{t+|ru|направляться|alt=направля́ющийся}}
 {{trans-bottom}}
