--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -68,7 +68,7 @@ From the prefix {{m|en|mega-}}, from {{der|en|grc|μέγας|t=great, large, mig
 # {{lb|cs|informal}} [[million]]
 
 ====Synonyms====
-* See also [[milión]]
+* See also {{m|cs|milión}}
 
 ----
 
@@ -78,10 +78,7 @@ From the prefix {{m|en|mega-}}, from {{der|en|grc|μέγας|t=great, large, mig
 {{da-adv}}
 
 # {{lb|da|informal}} {{l|en|very}}
-
-===Synonyms===
-* {{l|da|herre}}
-* {{l|da|super}}
+#: {{syn|da|herre|super}}
 
 ----
 
@@ -95,9 +92,7 @@ From {{af|eo|meg|-a}}.
 {{eo-head}}
 
 # {{lb|eo|ordinal|neologism|rare}} [[millionth]]
-
-====Synonyms====
-* {{l|eo|miliona}}
+#: {{syn|eo|miliona}}
 
 ----
 
@@ -140,13 +135,11 @@ From {{inh|is|non|mega}}, from {{inh|is|gem-pro|*maganą}}, from {{der|is|ine-pr
 # {{lb|is|ambitransitive|governs the accusative}} to be [[allowed]], to be [[permitted]], to [[may]]{{jump|is|be allowed|s}}
 #: {{ux|is|Þú '''mátt''' þetta ekki.|inline=1|You''''re''' not '''allowed''' to do that.}}
 #: {{ux|is|Hvað '''má''' bjóða ykkur að borða?|inline=1|What '''may''' offer you to eat?}}
+#: {{syn|is|hafa leyfi til}}
 # {{lb|is|intransitive}} to [[must]], to [[have to]]{{jump|is|must|s}}
+#: {{syn|is|verða}}
 # to have the [[strength]], to be [[able]]{{jump|is|have the strength|s}}
-
-====Synonyms====
-* {{jump|s|is|be allowed}} {{l|is|hafa leyfi til}}
-* {{jump|s|is|must}} {{l|is|verða}}
-* {{jump|s|is|have the strength}} {{l|is|megna}}
+#: {{syn|is|megna}}
 
 ====Derived terms====
 {{der3
@@ -166,7 +159,6 @@ From {{inh|is|non|mega}}, from {{inh|is|gem-pro|*maganą}}, from {{der|is|ine-pr
 |lang=is}}
 
 [[Category:Most used Icelandic verbs]]
-
 [[Category:Icelandic auxiliary verbs]]
 
 ----
@@ -180,16 +172,14 @@ From {{inh|id|ms|mega}}, from {{der|id|sa|मेघ|t=cloud}}.
 {{id-noun}}
 
 # [[cloud]] {{gloss|visible mass of water droplets suspended in the air}}
-
-====Synonyms====
-* {{l|id|awan}}
+#: {{syn|id|awan}}
 
 ----
 
 ==Malay==
 
 ===Alternative forms===
-* {{l|ms|ميݢ}}
+* {{alter|ms|ميݢ}}
 
 ===Etymology===
 From {{der|ms|sa|मेघ|t=cloud}}.
@@ -203,9 +193,7 @@ From {{der|ms|sa|मेघ|t=cloud}}.
 {{head|ms|noun|Jawi spelling|ميݢ}}
 
 # [[cloud]] {{gloss|visible mass of water droplets suspended in the air}}
-
-====Synonyms====
-* {{l|ms|awan}} / {{l|ms|اون}} (more commonly used)
+#: {{syn|ms|awan}} / {{l|ms|اون}} {{q|more commonly used}}
 
 ----
 
