--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -517,3 +517,25 @@ From {{etyl|en|tpi}} {{m|en|bet}}.
 
 ====Declension====
 {{vo-decl-noun}}
+
+----
+
+==Westrobothnian==
+
+===Etymology===
+From {{inh|gmq-bot|non|bit}}.
+
+===Pronunciation===
+* {{IPA|/bet/|/beːt/|lang=gmq-bot}}
+
+====Noun====
+{{head|gmq-bot|noun|g=n}}
+
+# the [[crossbar]] which joins the two drying racks at a barn
+
+====Noun====
+{{head|gmq-bot|noun|g=n}}
+
+# [[fleas]] and [[lice]]
+# the [[property]] to [[bite]]
+# [[mark]] after bite
