--- a/en/c/carburetion.855887.wikitext
+++ b/en/c/carburetion.855887.wikitext
@@ -7,3 +7,4 @@
 {{en-noun}}
 
 # The process, such as occurs in a [[carburetor]], of mixing fuel with oxygen or air in appropriate proportion for [[combustion]].
+It is the process of atomisation, vaporisation and mixing of fuel to air.
